--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-07-10 16:19:44
+lastsearch = 2024-07-10 17:37:49
 
 [hk.linkedin.com]
 match = -23.1%%
@@ -27,8 +27,8 @@ title =
 url = https://en.wikipedia.org/wiki/Coco_Chanel
 
 [www.sassymamahk.com]
-match = -200.0%%
-title = That Mama: Coco Chan, Founder Of Voltage PR ...
+match = -246.2%%
+title = That Mama: Coco Chan, Founder Of Voltage PR And Co- ...
 url = https://www.sassymamahk.com/coco-chan-voltage-pr-omsa-family-life/
 
 [www.tiktok.com]
@@ -47,8 +47,8 @@ title = Hong Kong-born Canadian actress Grace Chan ...
 url = https://www.alamy.com/hong-kong-born-canadian-actress-grace-chan-hoi-lam-attends-a-cross-year-activity-in-hong-kong-china-31-december-2018-image261310010.html
 
 [www.tripadvisor.com]
-match = -192.3%%
-title = Coco Viet Homestay - Hoi An Hotels - Tripadvisor
+match = -200.0%%
+title = Hoi An Hotel Prices & Reviews - Coco Viet Homestay
 url = https://www.tripadvisor.com/Hotel_Review-g298082-d19797871-Reviews-Coco_Viet_Homestay-Hoi_An_Quang_Nam_Province.html
 
 [jovelchan.com]
