--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-10 17:16:32
+lastsearch = 2024-07-10 17:40:37
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -244,7 +244,7 @@ url = https://baosonla.org.vn/the-thao/phong-trao-the-duc-the-thao-o-sop-cop-LcJ
 [books.google.com]
 match = -268.8%%
 title = Phật giáo Nam tông cái vùng Nam bộ - Page 112 - Google Books Result
-url = https://books.google.com/books?id=eREfEAAAQBAJ&pg=PA112&lpg=PA112&dq=chieu+lac+soc+08&source=bl&ots=d4HvwfT5aO&sig=ACfU3U39FNdcm83-DiQnr-IrbV-3RNjB2w&hl=en&sa=X&ved=2ahUKEwicooOGn5yHAxWeMlkFHUKaCq0Q6AF6BAgmEAM
+url = https://books.google.com/books?id=eREfEAAAQBAJ&pg=PA112&lpg=PA112&dq=chieu+lac+soc+08&source=bl&ots=d4HvwfV04T&sig=ACfU3U2bkev2qpxj479ZGovgTJ9gSTx1Hg&hl=en&sa=X&ved=2ahUKEwjTnKK3pJyHAxXDKUQIHVkyAXIQ6AF6BAg1EAM
 
 [daihoc.fpt.edu.vn]
 match = -162.5%%
