--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-18.html
 lastopen = 2024-06-10 00:49:07
 
 [search]
-lastsearch = 2024-07-10 11:44:10
+lastsearch = 2024-07-10 17:38:32
 
 [demtot.com]
-match = 45.0%%
-title = Đệm lò xo Dunlopillo
-url = https://demtot.com/dem-lo-xo-dunlopillo/
+match = 4.8%%
+title = Tag Archives: đệm lò xo
+url = https://demtot.com/tag/dem-lo-xo/
 
 [tuananh.vn]
 match = 52.4%%
