--- a/images/tam-trai-ks-uc-260-300/config.ini
+++ b/images/tam-trai-ks-uc-260-300/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-260-300.html
 lastopen = 2024-06-07 00:15:36
 
 [search]
-lastsearch = 2024-07-10 12:31:00
+lastsearch = 2024-07-10 17:34:30
 
 [www.cms.gov]
 match = 4.5%%
@@ -127,9 +127,9 @@ title = MEET ALISON MASS
 url = https://www.stern.nyu.edu/sites/default/files/assets/documents/STERNbusiness-Sp16-Meet-Alison-Mass.pdf
 
 [www.ncbi.nlm.nih.gov]
-match = -72.7%%
-title = The Role of Resveratrol in Cancer Therapy - PMC
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5751192/
+match = -118.2%%
+title = Wnt Signaling in Brain Tumors: A Challenging Therapeutic ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC10215617/
 
 [westsideobserver.com]
 match = -58.3%%
@@ -227,9 +227,9 @@ title = MAPA 2035 Long Range Transportation Plan
 url = https://mapacog.org/wp-content/uploads/2015/10/LRTP_2035_Amendment2.pdf
 
 [www.ars-grin.gov]
-match = 9.1%%
-title = Plant Inventory No. 173
-url = https://www.ars-grin.gov/npgs/pi_books/scans/pi173.pdf
+match = -18.2%%
+title = Plant Inventory No. 199, Part II
+url = https://www.ars-grin.gov/npgs/pi_books/scans/pi199pt2.pdf
 
 [www.iowa-city.org]
 match = -45.5%%
@@ -289,7 +289,7 @@ url = https://www.mynavyhr.navy.mil/Portals/55/Reference/NOOCS/Vol2/Entire_Manua
 [www.talgov.com]
 match = -18.2%%
 title = Vendor Lookup | Doing Business
-url = https://www.talgov.com/doingbusiness/vendorlookup.aspx
+url = https://www.talgov.com/doingbusiness/vendorlookup
 
 [www.usmcu.edu]
 match = 4.5%%
