--- a/images/tham-nhung-bali-160x230/config.ini
+++ b/images/tham-nhung-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-160x230.html
 lastopen = 2024-06-07 00:35:43
 
 [search]
-lastsearch = 2024-07-10 16:50:45
+lastsearch = 2024-07-10 17:38:10
 
 [demxanh.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Thảm Trải Sàn 100%% Nhập Khẩu Cao Cấp, Sang Trọng ...
 url = https://www.lazada.vn/products/mua-tham-nhan-qua-tham-li-bali-tham-trai-san-100-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-i1557438611-s6573104309.html
 
 [tiki.vn]
-match = -73.9%%
-title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm mã 31
-url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-ma-31-p38118824.html?spid=56906252
+match = -60.9%%
+title = Thảm trải sàn bali cao cấp kích thước 160*230cm màu 08
+url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-mau-08-p33115723.html
 
 [thegioidemviet.vn]
 match = -65.2%%
@@ -32,9 +32,9 @@ title = Thảm nhung Bali 160x230
 url = https://www.diepxuan.com/tham-nhung-bali-160x230.html
 
 [shopee.vn]
-match = -139.1%%
-title = Thảm lì bali in họa tiết 5D cao cấp trang trí phòng khách phòng ngủ
-url = https://shopee.vn/Thảm-trải-sàn-Thảm-lì-bali-in-họa-tiết-5D-cao-cấp-trang-trí-phòng-khách-phòng-ngủ-i.92889546.17769472611
+match = -117.4%%
+title = thảm lì bali in họa tiết 5d cao cấp trang trí phòng khách ...
+url = https://shopee.vn/Thảm-trải-sàn-thảm-lì-bali-in-họa-tiết-5d-cao-cấp-trang-trí-phòng-khách-phòng-ngủ-i.401842224.9433903363
 
 [www.noithatpassion.com]
 match = -73.9%%
