--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-07-10 12:35:50
+lastsearch = 2024-07-10 17:44:40
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -17,9 +17,9 @@ title = Sơ đồ sân bay Tân Sơn Nhất ga nội địa, quốc tế MỚI N
 url = https://vinpearl.com/vi/so-do-san-bay-tan-son-nhat
 
 [www.facebook.com]
-match = -80.0%%
-title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
-url = https://www.facebook.com/phimhaygiare/
+match = -126.7%%
+title = Ways Station Gaming - "Nghiêng nước ...
+url = https://www.facebook.com/waysstation/photos/a.179106562519975/1171642583266363/?type=3
 
 [phongthuykyhoa.com]
 match = -73.3%%
@@ -32,9 +32,9 @@ title = Thông tin sân bay
 url = https://www.bambooairways.com/vn/vi/travel-info/airports-and-network/airports-info
 
 [shopvnb.com]
-match = -173.3%%
-title = Top 8 sân cầu lông Gò Vấp chất lượng năm 2024 ...
-url = https://shopvnb.com/danh-sach-cac-san-cau-long-go-vap-nam-2020-cac-long-thu-da-biet-chua-.html
+match = -166.7%%
+title = Danh Sách Các Sân Cầu Lông Ở Bình Thạnh Mới Nhất
+url = https://shopvnb.com/danh-sach-cac-san-cau-long-o-binh-thanh-moi-nhat.html
 
 [dieuhanhgiaothong-sgtvt.hochiminhcity.gov.vn]
 match = -126.7%%
