--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-07-10 16:21:32
+lastsearch = 2024-07-10 17:45:14
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -142,9 +142,9 @@ title = Phê duyệt đồ án quy hoạch chi tiết xây dựng tỷ lệ 1/50
 url = https://benluc.longan.gov.vn/dat-dai/phe-duyet-do-an-quy-hoach-chi-tiet-xay-dung-ty-le-1-500-du-an-giai-phong-mat-bang-tao-quy-dat-sa-928998
 
 [www.tiktok.com]
-match = -260.0%%
-title = Đi ăn ốc Singapore ở khu D2 Bình Thạnh với tui, rổ rá bình ...
-url = https://www.tiktok.com/@hi.vidayyy/video/7308207874562395393
+match = -246.7%%
+title = Trend về D2 Bình Thạnh rồi nè Tui đi ăn lạp xưởng xúc xích ...
+url = https://www.tiktok.com/@hi.vidayyy/video/7322653266637032706
 
 [www.ministop.vn]
 match = -26.7%%
