--- a/images/chieu-lac-d2-09/config.ini
+++ b/images/chieu-lac-d2-09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-09.html
 lastopen = 2024-06-21 06:29:43
 
 [search]
-lastsearch = 2024-07-10 17:15:59
+lastsearch = 2024-07-10 18:17:39
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -77,9 +77,9 @@ title = Học cờ vua nâng cao
 url = https://www.cothongminh.com/tai-lieu-hoc-co-vua/26-hoc-co-vua-nang-cao?start=3
 
 [www.facebook.com]
-match = -153.3%%
-title = BELL UEH - [BELL's Connections] 🔥 [LỘ DIỆN ...
-url = https://www.facebook.com/bellueh/photos/a.278570742194275/5640041046047191/?type=3
+match = -86.7%%
+title = PHOTOTIMEVietnam | Ho Chi Minh City
+url = https://www.facebook.com/phototimevn/
 
 [duhocdoubleh.edu.vn]
 match = -193.3%%
@@ -287,9 +287,9 @@ title = Bán Mặt tiền 11-13 Nguyễn Văn Lạc P21 Quận Bình Thạnh ...
 url = https://cchouse.vn/Ban-Mat-tien-1113-Nguyen-Van-Lac-P21-Quan-Binh-Thanh-Goc-Mui-Tau-Xo-Viet-Nghe-Tinh-2-chieu-id4857
 
 [concung.com]
-match = -186.7%%
-title = Ba lô chống lạc bé gái Minnie DHF74852-B (Đỏ) giá tốt
-url = https://concung.com/thoi-trang/ba-lo-chong-lac-be-cai-minnie-dhf74852-b-do-61526.html
+match = -220.0%%
+title = Ba lô chống lạc bé gái Princess DHF19017-D2 (Hồng) giá tốt
+url = https://concung.com/thoi-trang/ba-lo-chong-lac-be-gai-princess-dhf19017-d2-hong-61528.html
 
 [timbus.vn]
 match = 0.0%%
