--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-07-10 17:20:41
+lastsearch = 2024-07-10 18:15:30
 
 [www.lazada.vn]
 match = -55.6%%
@@ -202,9 +202,9 @@ title = Focus Single lever basin mixer 70 with bidette hand ...
 url = https://www.hansgrohe.com/articledetail-focus-single-lever-basin-mixer-70-with-bidette-hand-shower-and-shower-hose-160-cm-31926000
 
 [pro.hansgrohe.com]
-match = -138.9%%
-title = AXOR Universal Softsquare Shower door handle 444 mm
-url = https://pro.hansgrohe.com/articledetail-axor-universal-softsquare-shower-door-handle-444-mm-42837000
+match = -155.6%%
+title = Talis E Shower mixers: 1 function, Chrome, Item No. ...
+url = https://pro.hansgrohe.com/articledetail-talis-e-single-lever-shower-mixer-for-concealed-installation-for-ibox-universal-71765000
 
 [www.sciencedirect.com]
 match = -150.0%%
@@ -225,4 +225,9 @@ url = https://ec.europa.eu/eurostat/documents/3217494/11478276/KS-DK-20-001-EN-N
 match = -183.3%%
 title = Comparative Evaluation of Energy Management Models for ...
 url = https://railroads.dot.gov/sites/fra.dot.gov/files/fra_net/16210/1984_COMPARATIVE EVALUATION OF ENERGY MANAGEMENT MODELS.PDF
+
+[docs.cityoffederalway.com]
+match = -105.6%%
+title = 45 - IIS Windows Server - City of Federal Way
+url = https://docs.cityoffederalway.com/WebLink/DocView.aspx?id=1871032&page=57&
 
