--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-07-10 16:29:19
+lastsearch = 2024-07-10 18:26:33
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -12,8 +12,8 @@ title = Chăn ga gối classic cotton mã C16-C38
 url = https://changagoidemsonghong.com/chan-ga-goi-cotton-c16-c38
 
 [www.diepxuan.com]
-match = -58.3%%
-title = Điệp Xuân Bộ chăn ga gối màu rẻ 16 - Chăn ga gối đệm Điệp Xuân
+match = 58.3%%
+title = Điệp Xuân Bộ chăn ga gối màu rẻ 16
 url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 
 [nangstore.vn]
@@ -79,7 +79,7 @@ url = https://ru9.vn/blogs/magazine/cac-mau-chan-ga-goi-dem
 [shopee.vn]
 match = -62.5%%
 title = bộ chăn ga gối màu xanh lá giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=bộ chăn ga gối màu xanh lá&urlold=bo-chan-ga-goi-thun-1-mau-xanh-la-non/955821120876975099/877968015750663345/ 
+url = https://shopee.vn/search?keyword=bộ chăn ga gối màu xanh lá&urlold=bo-chan-ga-goi-thun-1-mau-xanh-la-non/955821120876975099/877968015750663345/
 
 [demxanh.com]
 match = -8.3%%
