--- a/images/tham-nhung-bali-2m-3m/config.ini
+++ b/images/tham-nhung-bali-2m-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-2m-3m.html
 lastopen = 2024-06-09 22:34:54
 
 [search]
-lastsearch = 2024-07-10 15:47:09
+lastsearch = 2024-07-10 18:28:12
 
 [noithathomy.com]
 match = -42.9%%
@@ -12,14 +12,14 @@ title = Thảm nỉ Bali 2m x 3m TNHM02 | Hàng nhâp khẩu
 url = https://noithathomy.com/san-pham/tham-ni-bali-2m-x-3m-tnhm02/
 
 [shopee.vn]
-match = -100.0%%
-title = 50 Mẫu Thảm 2m x 3m Thảm Nỉ Bali Trải Sàn Trải Phòng ...
-url = https://shopee.vn/Tặng-Thảm-Lau-Chân-50-Mẫu-Thảm-2m-x-3m-Thảm-Nỉ-Bali-Trải-Sàn-Trải-Phòng-Khách-Phòng-Ngủ-Sang-Trọng-i.848657871.23586650302
+match = -114.3%%
+title = Thảm Bali 2m x 3m thảm nỉ trải sàn decor phòng khách ...
+url = https://shopee.vn/Thảm-Bali-2m-x-3m-thảm-nỉ-trải-sàn-decor-phòng-khách-phòng-ngủ-giúp-căn-nhà-thêm-ấm-áp-i.758917047.22001325177
 
 [www.lazada.vn]
-match = 23.8%%
-title = Thảm bali 2m x 3m cao cấp
-url = https://www.lazada.vn/products/tham-bali-2m-x-3m-cao-cap-i2597386188.html
+match = -19.0%%
+title = Thảm Phòng Khách 2m X 3m Giá Tốt T07/2024
+url = https://www.lazada.vn/tag/tham-phong-khach-2m-x-3m/
 
 [tiki.vn]
 match = -128.6%%
