CI images update

--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-07-10 16:49:38
+lastsearch = 2024-07-10 19:24:11
 
 [eva.vn]
 match = -157.9%%
@@ -210,4 +210,9 @@ url = https://baobacgiang.vn/thang-bi-bong-chuyen-nu-viet-nam-doat-huy-chuong-do
 match = -7.1%%
 title = Cây chiêu liêu
 url = https://giongcaytrong.com/san-pham/cay-cong-trinh-cay-bong-mat/cay-bong-mat/cay-chieu-lieu/
+
+[medlatec.vn]
+match = -136.8%%
+title = Cây náng hoa trắng - dược liệu đa lợi ích cho sức khỏe ...
+url = https://medlatec.vn/tin-tuc/cay-nang-hoa-trang--duoc-lieu-da-loi-ich-cho-suc-khoe-con-nguoi-s51-n33318
 
