--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-10 04:12:49
+lastsearch = 2024-07-10 19:29:56
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -437,9 +437,9 @@ title = Lương hưu mới được chi trả tới hơn 60%% người hưởng
 url = https://cafef.vn/luong-huu-moi-duoc-chi-tra-toi-hon-60-nguoi-huong-188240702055151499.chn
 
 [baobinhphuoc.com.vn]
-match = -104.8%%
-title = Bình Phước sớm trở thành điểm đến hấp dẫn trong vùng ...
-url = https://baobinhphuoc.com.vn/news/1/159600/binh-phuoc-som-tro-thanh-diem-den-hap-dan-trong-vung-dong-nam-bo
+match = -114.3%%
+title = Từ nay đến cuối năm xuất hiện 5-7 cơn bão ảnh hưởng ...
+url = https://baobinhphuoc.com.vn/news/9/159885/tu-nay-den-cuoi-nam-xuat-hien-5-7-con-bao-anh-huong-truc-tiep-den-viet-nam
 
 [baoyenbai.com.vn]
 match = -114.3%%
