--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-10 14:15:22
+lastsearch = 2024-07-10 19:23:38
 
 [demxanh.com]
 match = -42.9%%
-title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 21
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-21.html
+title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 01
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-01.html
 
 [www.diepxuan.com]
 match = 25.0%%
@@ -152,9 +152,9 @@ title = News Staley Farms Private Golf Community Kansas City MO
 url = http://www.staleyfarmshomeskc.com/docs/news-frame.asp?title=Here Is Staley Farms Golf Community In Beautiful North Kansas ...&page=https://xn----ctbbfhtdwrbb1ale.xn--p1ai/9618573etpm-internationalcomafe88y
 
 [www.lebguide.com]
-match = -46.4%%
-title = Pete rose baseball atari 7800 [dDgbN2] - LebGuide.com
-url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn----7sbgjxfdsjc1aeee3e.xn--p1ai/96312487svexotickredibankirruv4fe36a
+match = -67.9%%
+title = L'occitane body lotion singapore [FSnycw] - LebGuide.com
+url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn--h1aakbimdbl.xn--p1ai/59364718k6zwlatv4fe36a
 
 [news.google.it]
 match = -3.6%%
