--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-07-10 18:26:33
+lastsearch = 2024-07-10 20:00:33
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -42,9 +42,9 @@ title = Bộ chăn ga gối Sông Hồng H16 043 ga chun
 url = https://songhonghanoi.vn/bo-chan-ga-goi-song-hong-h16043-ga-chun.html
 
 [cuahangchangagoidem.com]
-match = -41.7%%
-title = Cửa Hàng Chăn Ga Gối Đệm Nhập Hàng Tận Xưởng Giá Tốt
-url = https://cuahangchangagoidem.com/cua-hang-chan-ga-goi-dem/
+match = -33.3%%
+title = Những Bộ Chăn Ga Gối Đệm Cao Cấp Sang Trọng Quý Phái
+url = https://cuahangchangagoidem.com/bo-chan-ga-goi-dem-cao-cap/
 
 [tiki.vn]
 match = 0.0%%
