--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-07-10 14:19:59
+lastsearch = 2024-07-10 20:25:03
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -22,9 +22,9 @@ title = Mền Lông Tuyết Thái Giá Tốt T07/2024
 url = https://www.lazada.vn/tag/men-long-tuyet-thai/
 
 [tiki.vn]
-match = -18.5%%
-title = Chăn nhung tuyết dày 5kg hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chăn nhung tuyết dày 5kg
+match = 11.1%%
+title = Chăn nhung tuyết hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chăn nhung tuyết
 
 [demxanh.com]
 match = -18.5%%
@@ -32,14 +32,14 @@ title = Chăn tuyết Hàn Quốc Soft 2kg màu trắng hình tim
 url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-mau-trang-hinh-tim.html
 
 [ninhouse.vn]
-match = 32.0%%
-title = Mền Tuyết NIN - Liac Snow
-url = https://ninhouse.vn/products/men-tuyet-nin-liac-snow
+match = 37.5%%
+title = Mền Tuyết NIN - Hazelnut
+url = https://ninhouse.vn/products/men-tuyet-nin-hazelnut
 
 [www.youtube.com]
-match = -66.7%%
-title = chăn tuyết thái lan giá rẻ - Chăn lông tuyết - Shop Sắc Mai ...
-url = https://www.youtube.com/watch?v=XHN7YU5NYi4
+match = -29.6%%
+title = CHÂN GÀ RÚT XƯƠNG SỐT THÁI mềm giòn đậm vị, ăn là ...
+url = https://www.youtube.com/watch?v=vZ2hBBqGbU4
 
 [baodaknong.vn]
 match = -7.4%%
