--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-07-10 11:23:09
+lastsearch = 2024-07-10 20:27:17
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -22,9 +22,9 @@ title = Chiếu Tăm H&T - Chiếu Thanh Hương Trúc cao cấp
 url = https://chieutruc.info/chieu-tam-ht/
 
 [www.thietbidiendgp.vn]
-match = -46.7%%
-title = Đèn mắt ếch chiếu điểm HT 8095 10W
-url = https://www.thietbidiendgp.vn/products/den-mat-ech-chieu-diem-ht-8095-10w
+match = -133.3%%
+title = Đèn mắt ếch chiếu điểm HT 8094 10W HT MAX LIGHT
+url = https://www.thietbidiendgp.vn/products/den-mat-ech-chieu-diem-ht-8094-10w
 
 [www.htlightlevel.vn]
 match = -193.3%%
@@ -110,4 +110,9 @@ url = https://noithattinhtuyet.com/chieu-tam-cay-h-t-3535
 match = -86.7%%
 title = SIÊU TRỔ NHANH - Trổ đều, trổ thoát
 url = https://phattriennongnghiepht.vn/san-pham/sieu-tro-nhanh-tro-deu-tro-thoat/
+
+[www.htv.com.vn]
+match = -106.7%%
+title = Lịch phát sóng - Đài Truyền hình TP. ...
+url = https://www.htv.com.vn/lich-phat-song
 
