--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-coi-viet-thai-18.html
 lastopen = 2024-06-06 16:54:00
 
 [search]
-lastsearch = 2024-07-10 15:38:15
+lastsearch = 2024-07-10 20:25:14
 
 [chieutruc.info]
 match = -100.0%%
@@ -37,9 +37,9 @@ title = [HD] Chiếu cói Kim Sơn - Ninh Bình
 url = https://www.youtube.com/watch?v=3QOyWtlqmqg
 
 [www.facebook.com]
-match = 45.5%%
-title = Chiếu Cói Thân Vui Thái Bình
-url = https://www.facebook.com/p/Chiếu-Cói-Thân-Vui-Thái-Bình-100069860554625/
+match = 31.8%%
+title = Chiếu Cói Nga Sơn - Cói Xanh
+url = https://www.facebook.com/CoiXanhInc/?locale=vi_VN
 
 [medlatec.vn]
 match = 0.0%%
