--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-07-10 12:48:35
+lastsearch = 2024-07-10 20:24:08
 
 [everonvn.com.vn]
-match = -133.3%%
-title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity màu ...
+match = -114.3%%
+title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity ...
 url = https://everonvn.com.vn/everon/611/bo-everon-es1807
 
 [www.everonqb.com]
-match = -71.4%%
-title = Ga phủ ESM20013 180x200 - Everon Quảng Bình Trang Chủ
-url = https://www.everonqb.com/ga-phu-esm20013-180x200.html
+match = -9.5%%
+title = Everon Quảng Bình Ga phủ EPM19043 180x200
+url = https://www.everonqb.com/ga-phu-epm19043-180x200.html
 
 [www.diepxuan.com]
 match = 100.0%%
