--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-07-10 17:37:28
+lastsearch = 2024-07-10 20:25:59
 
 [dongagroup.vn]
 match = -272.7%%
@@ -87,9 +87,9 @@ title = Giường 2 M Giá Tốt T05/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/giuong-2-m/?innerlink=hot_v1
 
 [tiki.vn]
-match = -181.8%%
-title = Giường 2mx2m2 hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=giường 2mx2m2
+match = -200.0%%
+title = Giường 1m2 x 2m hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=giường 1m2 x 2m
 
 [www.facebook.com]
 match = -281.8%%
@@ -107,8 +107,8 @@ title = Zinus: Shop Mattresses, Bed Frames & Sofas
 url = https://www.zinus.com/
 
 [pamed.com.vn]
-match = -145.5%%
-title = MN-G2CN - Giường 2 chức năng - Pamed
+match = -409.1%%
+title = MN-G2CN - Giường 2 chức năng | Pamed – Trang thiết bị, vật tư y tế
 url = https://pamed.com.vn/mn-g2cn-giuong-2-chuc-nang
 
 [www.nitrc.org]
