--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-10 14:47:53
+lastsearch = 2024-07-10 20:24:32
 
 [www.gov.uk]
 match = -200.0%%
@@ -184,7 +184,7 @@ url = https://www.premierleague.com/
 [books.google.com]
 match = -260.0%%
 title = Department of the Army Pamphlet - Page 153 - Google Books Result
-url = https://books.google.com/books?id=wBXAEQTV0TAC&pg=PA153&lpg=PA153&dq=man+re+trang+16&source=bl&ots=luPlwOCVLg&sig=ACfU3U265GVleIIp9aF6lHJNBXEKir3rnw&hl=en&sa=X&ved=2ahUKEwiziufRv5qHAxVrFlkFHRNOAiMQ6AF6BAgqEAM
+url = https://books.google.com/books?id=wBXAEQTV0TAC&pg=PA153&lpg=PA153&dq=man+re+trang+16&source=bl&ots=luPlxLDXQg&sig=ACfU3U1oGo4-bpPiDJtRyQuHojlj93Wbdw&hl=en&sa=X&ved=2ahUKEwiRjcOIyZyHAxVOJTQIHXKxDkcQ6AF6BAgnEAM
 
 [www.nolo.com]
 match = 0.0%%
