--- a/images/chieu-truc-thai-den15/config.ini
+++ b/images/chieu-truc-thai-den15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den15.html
 lastopen = 2024-06-07 00:18:02
 
 [search]
-lastsearch = 2024-07-10 19:25:50
+lastsearch = 2024-07-10 20:37:02
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,14 +17,14 @@ title = Chieu truc thai lan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chieu truc thai lan
 
 [shopee.vn]
-match = -42.9%%
-title = chiếu trúc hạt vàng cước đỏ thái lan đủ kích cỡ
-url = https://shopee.vn/chiếu-trúc-hạt-vàng-cước-đỏ-thái-lan-đủ-kích-cỡ-i.194586860.3058965326
+match = -52.4%%
+title = Chiếu Trúc Gỗ Xịn Thái Lan 1,5mx1,9m-1,6mx2m-1, ...
+url = https://shopee.vn/Chiếu-Trúc-Gỗ-Xịn-Thái-Lan-1-5mx1-9m-1-6mx2m-1-8mx2m-Hàng-Cao-Cấp-i.158114102.5332512087
 
 [demxanh.com]
-match = -28.6%%
-title = [Hot] Bảng giá Chiếu trúc khuyến mãi 2023
-url = https://demxanh.com/bang-gia-chieu-truc-2018.html
+match = -81.0%%
+title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
+url = https://demxanh.com/chieu-truc.html
 
 [www.lazada.vn]
 match = 9.5%%
@@ -112,9 +112,9 @@ title = Dự đoán EURO: Nhận định bóng đá Romania và Hà Lan (23h ...
 url = https://www.youtube.com/watch?v=Tf9cXUhbMuc
 
 [hanoimoi.vn]
-match = -104.8%%
-title = Châu chấu tre phát sinh và gây hại tại 11 tỉnh phía Bắc
-url = https://hanoimoi.vn/chau-chau-tre-phat-sinh-va-gay-hai-tai-11-tinh-phia-bac-669360.html
+match = -90.5%%
+title = Ngành Đường sắt giảm đến 5%% giá vé tàu dịp lễ 2-9
+url = https://hanoimoi.vn/nganh-duong-sat-giam-den-5-gia-ve-tau-dip-le-2-9-671697.html
 
 [tapchinganhang.gov.vn]
 match = -85.7%%
@@ -122,9 +122,9 @@ title = Nâng cao bảo mật, an toàn giao dịch không tiền mặt
 url = https://tapchinganhang.gov.vn/nang-cao-bao-mat-an-toan-giao-dich-khong-tien-mat.htm
 
 [baomoi.com]
-match = -119.0%%
-title = Một người shipper vi phạm nồng độ cồn 2 lần trong 1 tuần
-url = https://baomoi.com/mot-nguoi-shipper-vi-pham-nong-do-con-2-lan-trong-1-tuan-c49578223.epi
+match = -109.5%%
+title = Đóng cửa nhóm giữ trẻ tự phát có dấu hiệu bạo hành trẻ em
+url = https://baomoi.com/dong-cua-nhom-giu-tre-tu-phat-co-dau-hieu-bao-hanh-tre-em-c49597733.epi
 
 [suckhoedoisong.vn]
 match = -114.3%%
@@ -157,9 +157,9 @@ title = Mấy ngày này chốt cửa của nhà tắm bị hỏng nhưng không
 url = https://maisonpartagee-villereal.fr/địt-gái-thái-lan-không-che.html
 
 [vietnamnet.vn]
-match = -61.9%%
-title = Xem trực tiếp EURO 2024 ở đâu, trên kênh nào?
-url = https://vietnamnet.vn/xem-truc-tiep-euro-2024-o-dau-tren-kenh-nao-2291085.html
+match = -109.5%%
+title = U19 Việt Nam thua U21 Avenir 0-1 trước giải Đông Nam Á ...
+url = https://vietnamnet.vn/u19-viet-nam-thua-u21-avenir-0-1-truoc-giai-dong-nam-a-2024-2300572.html
 
 [nbtv.vn]
 match = -119.0%%
@@ -340,4 +340,14 @@ url = https://baoquangninh.vn/san-sang-cho-dai-hoi-dai-bieu-mttq-tinh-lan-thu-xi
 match = -138.1%%
 title = Triển vọng, rào cản phát triển điện gió trên thế giới, Việt ...
 url = https://www.erav.vn/tin-tuc/t36540/trien-vong-rao-can-phat-trien-dien-gio-tren-the-gioi-viet-nam-trong-ngan-va-trung-han.html
+
+[baotintuc.vn]
+match = -109.5%%
+title = Đóng cửa nhóm giữ trẻ tự phát có dấu hiệu bạo hành trẻ em
+url = https://baotintuc.vn/van-de-quan-tam/dong-cua-nhomgiu-tre-tu-phat-co-dau-hieu-bao-hanh-tre-em-20240710195341945.htm
+
+[media.chinhphu.vn]
+match = -138.1%%
+title = Đà Nẵng mở đợt cao điểm kiểm tra, xử phạt các hành vi khai ...
+url = https://media.chinhphu.vn/da-nang-mo-dot-cao-diem-kiem-tra-xu-phat-cac-hanh-vi-khai-thac-iuu-102240710161413342.htm
 
