--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-10 18:48:19
+lastsearch = 2024-07-10 20:35:36
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
-match = -150.0%%
-title = TÌNH CỜ TÌM ĐƯỢC NGƯỜI THÂN VÔ GIA CƯ Ở MỸ QUA ...
-url = https://www.youtube.com/watch?v=6598XYpaW3E
+match = -212.5%%
+title = [TV] Gấm Kami VS Uyên Phương | GIẢI POOL 9 BI HBSF II ...
+url = https://www.youtube.com/watch?v=Ir7sFOF1oOY
 
 [hawater.com.vn]
 match = -75.0%%
@@ -102,9 +102,9 @@ title = PG-1 - Yamaha Motor Việt Nam
 url = https://yamaha-motor.com.vn/xe/pg-1-bns1/
 
 [tuoitre.vn]
-match = -62.5%%
-title = Lịch thi đấu vòng 16 đội Euro 2024
-url = https://tuoitre.vn/lich-thi-dau-vong-16-doi-euro-2024-20240627051958046.htm
+match = -168.8%%
+title = Thả trăn gấm quý hiếm gần 12kg về núi rừng Phú Quốc
+url = https://tuoitre.vn/video/tha-tran-gam-quy-hiem-gan-12kg-ve-nui-rung-phu-quoc-164109.htm
 
 [www.apple.com]
 match = 0.0%%
