--- a/images/chieu-lac-soc-10/config.ini
+++ b/images/chieu-lac-soc-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-10.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-10 14:26:46
+lastsearch = 2024-07-10 20:38:26
 
 [www.chieulongdinh.com.vn]
 match = -93.8%%
@@ -230,4 +230,9 @@ url = https://nld.com.vn/podcast/chieu-nay-tp-hcm-cong-bo-diem-chuan-lop-10-1962
 match = -231.2%%
 title = Vượt qua nỗi sợ lạc nội mạc tử cung Chọn đối mặt, chọn lạc ...
 url = https://www.youtube.com/watch?v=Rj_I4Cb0gKo
+
+[www.pharmacity.vn]
+match = -112.5%%
+title = Bảng chiều cao cân nặng của trẻ em từ 0-10 tuổi
+url = https://www.pharmacity.vn/bang-chieu-cao-can-nang-cua-tre-tu-0-10-tuoi-chuan-nhat-theo-who.htm
 
