--- a/images/nem-caosu-lien-a-classic-180x200x10/config.ini
+++ b/images/nem-caosu-lien-a-classic-180x200x10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-lien-a-classic-180x200x10.html
 lastopen = 2024-07-07 18:25:44
 
 [search]
-lastsearch = 2024-07-10 18:33:57
+lastsearch = 2024-07-10 20:31:59
 
 [nemgiakho.com]
 match = 8.6%%
@@ -65,4 +65,9 @@ url = https://thegioidemviet.vn/nem-cao-su-lien-a-classic/
 match = -8.6%%
 title = Bảng giá Nệm Liên Á tháng 7/2024 Mới cùng khuyến mãi
 url = https://www.thegioinemvip.com/bang-gia-nem-lien-a-khuyen-mai-moi-nhat.html
+
+[shopee.vn]
+match = 68.6%%
+title = Đệm cao su Liên Á Classic 180x200x10cm - Nệm.
+url = https://shopee.vn/Đệm-cao-su-Liên-Á-Classic-180x200x10cm-CHÍNH-HÃNG-BẢO-HÀNH-10-NĂM-i.37605375.9166502745
 
