CI images update

--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-10 20:23:56
+lastsearch = 2024-07-10 21:35:56
 
 [quizlet.com]
 match = -170.0%%
@@ -52,9 +52,9 @@ title = List of acupuncture points
 url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 
 [books.google.com]
-match = -270.0%%
-title = The United States Air Force JAG Law Review
-url = https://books.google.com/books?id=hRVIAQAAIAAJ&pg=PA147&lpg=PA147&dq=man+ren+16&source=bl&ots=ISTkSnsMyM&sig=ACfU3U1M2M757Zgd3vHNz4zgshhb5UnN5g&hl=en&sa=X&ved=2ahUKEwiV_t3_npyHAxWQFFkFHSjfD2gQ6AF6BAgTEAM
+match = -280.0%%
+title = The Letter to Ren An and Sima Qian’s Legacy
+url = https://books.google.com/books?id=eCnvCwAAQBAJ&pg=PA170&lpg=PA170&dq=man+ren+16&source=bl&ots=0fshPWcr_e&sig=ACfU3U376d7cxYCuNZh8esBxZ4nyRNpxrA&hl=en&sa=X&ved=2ahUKEwjC0c6D2ZyHAxUwGDQIHdxBBdQQ6AF6BAgTEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
