--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-10 20:04:12
+lastsearch = 2024-07-10 21:35:34
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -22,9 +22,9 @@ title = Nemesis hits rank 2 Korea - 1726 lp
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
-match = -45.5%%
-title = Kristi Noem
-url = https://en.wikipedia.org/wiki/Kristi_Noem
+match = -33.3%%
+title = Nam Joo-hyuk
+url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
 
 [www.facebook.com]
 match = 15.0%%
@@ -132,9 +132,9 @@ title = Wild Rift: Welcome to League of Legends
 url = https://wildrift.leagueoflegends.com/en-us/
 
 [books.google.com]
-match = -135.0%%
-title = The Japan Daily Mail - Page 194 - Google Books Result
-url = https://books.google.com/books?id=63Q9AQAAMAAJ&pg=RA1-PA194&lpg=RA1-PA194&dq=ruot+nem+korea+9f+12&source=bl&ots=-bek-qAMgZ&sig=ACfU3U3qW0TYVkmkRvJQ5aYLNj5NotApTg&hl=en&sa=X&ved=2ahUKEwjx-ZPcyJuHAxXMj4kEHbhzA_8Q6AF6BAgoEAM
+match = -115.0%%
+title = Japan Weekly Mail - Page 194 - Google Books Result
+url = https://books.google.com/books?id=QyVCAQAAMAAJ&pg=PA194&lpg=PA194&dq=ruot+nem+korea+9f+12&source=bl&ots=_so9LMK4is&sig=ACfU3U2Fh1XPubGi6U4tKCQSV_VCtL39CQ&hl=en&sa=X&ved=2ahUKEwjN1PP42JyHAxX-ADQIHXMvDCwQ6AF6BAgWEAM
 
 [thehill.com]
 match = -105.0%%
