CI images update

--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-07-10 20:38:58
+lastsearch = 2024-07-10 22:30:47
 
 [everon.online]
 match = 19.2%%
@@ -220,4 +220,39 @@ url = https://everonminhkhai.com/product-category/chan-ga-goi/bo-chan-ga/bo-chan
 match = -42.3%%
 title = Chăn bốn mùa MicroTencel Xám phối Trắng K-Bedding ...
 url = https://kbedding.vn/product/chan-bon-mua-microtencel-xam-phoi-trang-k-bedding-kmtp112/
+
+[www.delta-xray.net]
+match = -96.2%%
+title = Radio blagovesti Beiseker alberta jobs Dv6-6c65se Danza del ...
+url = https://www.delta-xray.net/redir.php?URL=https://sevnailtime.ru/91824753zwfe43a
+
+[stevematuro.com]
+match = -46.2%%
+title = Steve Maturo, Agoura Hills Real Estate Expert -
+url = https://stevematuro.com/show.aspx?url=https://xn--b1af6a9ad0c.xn--p1ai/278396557x074cfd4fe43y
+
+[library.dmh.go.th]
+match = -7.7%%
+title = Dr shahrul zuraidi idris [wINVcy]
+url = https://library.dmh.go.th/rploei/dublin.linkout.php?url=https://xn--b1axcfd5c.xn--p1ai/lx9CTrsvfsffe98
+
+[202.129.46.118]
+match = -5.0%%
+title = Pro mark 5b [qeA7nf]
+url = http://202.129.46.118/ULIB6NEW//dublin.linkout.php?url=https://xn--b1af6a9ad0c.xn--p1ai/53416927ba86comv4fe36a
+
+[www.designblog.de]
+match = -4.2%%
+title = Live preview for Website
+url = https://www.designblog.de/responsive/?site=xn--h1adbbiehr8e1a2d.xn--p1ai/Ts1Z4ONfe43v
+
+[www.museum.ru]
+match = -130.8%%
+title = Uppercase first character excel Tsentralny dom literatorov Pierre ...
+url = http://www.museum.ru/future/lmp/link.asp?back=web/default.htm&url=http://xn--b1afzj3b4c.xn--p1ai/kMcEI9afe
+
+[weeklyrentals.com]
+match = -7.7%%
+title = {ivjfw} Modifikasi motor honda c80
+url = http://weeklyrentals.com/dorunit.cgi?url=xn--80aaflte4h.xn--p1ai/sXAxDw6fepr
 
