--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-10 21:32:02
+lastsearch = 2024-07-10 22:30:58
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -420,4 +420,9 @@ url = https://vnexpress.net/su-that-ve-than-duoc-tang-chieu-cao-sau-tuoi-30-4764
 match = -225.0%%
 title = Thông tin chi tiết về 16 vận động viên Việt Nam dự Olympic ...
 url = https://baocaovien.vn/tin-tuc/thong-tin-chi-tiet-ve-16-van-dong-vien-viet-nam-du-olympic-paris-2024/142377.html
+
+[timbus.vn]
+match = 0.0%%
+title = Tìm đường xe buýt
+url = http://timbus.vn/
 
