--- a/images/goi-om-re-to/config.ini
+++ b/images/goi-om-re-to/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/goi-om-re-to.html
 lastopen = 2024-06-10 00:44:39
 
 [search]
-lastsearch = 2024-07-10 22:19:37
+lastsearch = 2024-07-10 22:37:31
 
 [dvan.org]
 match = -41.7%%
@@ -38,8 +38,8 @@ url = https://cuahangchangagoidem.com/goi-om/
 
 [shopee.vn]
 match = -283.3%%
-title = (Gì cũng rẻ) Ruột gối ôm người lớn bông hạt cực dày ...
-url = https://shopee.vn/(Gì-cũng-rẻ)-Ruột-gối-ôm-người-lớn-bông-hạt-cực-dày-bông-ruột-gối-ôm-to-loại-to-30x100cm-i.319495073.9962303518
+title = Gối ôm người lớn - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/gối ôm/người lớn
 
 [gaubongquatang.com]
 match = -41.7%%
