--- a/images/chieu-dieu-hoa-cao-su-160x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-160x200.html
 lastopen = 2024-07-01 06:44:23
 
 [search]
-lastsearch = 2024-07-10 18:11:20
+lastsearch = 2024-07-10 22:36:16
 
 [demxanh.com]
 match = 34.5%%
@@ -14,7 +14,7 @@ url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-tim-than.html
 [tiki.vn]
 match = 20.7%%
 title = Mua Chiếu Điều Hòa Cao Su Non Latex Loại 1 Màu
-url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html?spid=136632823
+url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html?spid=136632732
 
 [demchinhhang.com]
 match = 51.7%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hoà Băng Lạnh (2 màu)
 url = https://demchinhhang.com/products/chieu-dieu-hoa-cao-su-01
 
 [www.lazada.vn]
-match = 13.8%%
-title = CHIẾU ĐIỀU HOÀ CHIẾU CAO SU NON 3D HOẠ TIẾT ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-chieu-cao-su-non-3d-hoa-tiet-tang-kem-2-vo-goi-i1328333458.html
+match = -17.2%%
+title = chiếu điều hòa cao su non 5d mềm mịn thoáng mát hàng ...
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-5d-mem-min-thoang-mat-hang-nhap-khau-loai-1size-160x200-180x200-220x200-i1916363851.html
 
 [nanara.vn]
 match = 34.5%%
