--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-07-10 22:22:11
+lastsearch = 2024-07-10 22:31:52
 
 [www.diepxuan.com]
-match = 36.4%%
-title = Điệp Xuân Thảm giường Bode 180x200
-url = https://www.diepxuan.com/tham-giuong-bode-180x200.html
+match = 100.0%%
+title = Thảm giường II 180x200
+url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 
 [demxanh.com]
-match = -22.7%%
-title = Thảm trải giường cao su non màu xanh nhạt
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-nhat.html
+match = -9.1%%
+title = Thảm trải giường cao su non màu trắng
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-trang.html
 
 [www.lazada.vn]
 match = -113.6%%
-title = Ga chống thấm trải giường cotton 2 lớp loại tốt kích thước ...
-url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html
+title = 2023Giường không thấm nước Tấm trải giường được trang bị ...
+url = https://www.lazada.vn/products/2023giuong-khong-tham-nuoc-tam-trai-giuong-duoc-trang-bi-voi-day-dan-hoi-bao-ve-nem-chong-truot-tam-trang-bi-doi-90140160-180x200-i2444114371.html
 
 [noithatlongthai.com]
 match = -13.6%%
