--- a/images/chieu-dieu-hoa-co-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 lastopen = 2024-06-06 16:54:53
 
 [search]
-lastsearch = 2024-07-10 16:16:41
+lastsearch = 2024-07-10 22:47:08
 
 [shopee.vn]
 match = 0.0%%
@@ -67,9 +67,9 @@ title = Nằm chiếu điều hoà có tốt cho sức khoẻ không?
 url = https://thegioinem.com/nam-chieu-dieu-hoa-co-tot-cho-suc-khoe-khong.html
 
 [foreverbedding.net]
-match = 37.5%%
-title = Chiếu điều hòa - Forever Bedding
-url = https://foreverbedding.net/chieu-dieu-hoa
+match = -20.8%%
+title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
+url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
 
 [joliefam.vn]
 match = -37.5%%
@@ -130,4 +130,9 @@ url = https://chiaki.vn/chieu-dieu-hoa-tencel-kem-2-vo-goi
 match = -54.2%%
 title = Chiếu điều hòa cao su non chính hãng đẹp nhất 2024 - Russo
 url = https://russo.vn/chieu-dieu-hoa-cao-su-non/
+
+[chieutrelinhchi.com]
+match = 12.5%%
+title = Chiếu điều hòa sợi mây kích thước 1m6x1m9
+url = https://chieutrelinhchi.com/chieu-may-dieu-hoa/chieu-dieu-hoa-soi-may-kich-thuoc-1m6x1m9-108.html
 
