--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-07-10 21:11:55
+lastsearch = 2024-07-10 22:48:35
 
 [www.galottery.com]
 match = -7.7%%
@@ -395,4 +395,9 @@ url = https://www.dailymotion.com/video/x7sewxg
 match = -61.5%%
 title = Gani, AP, IN 14 Days Weather
 url = https://www.theweathernetwork.com/en/city/in/andhra-pradesh/gani/14-days
+
+[www.ncsl.org]
+match = -15.4%%
+title = State Minimum Wages
+url = https://www.ncsl.org/labor-and-employment/state-minimum-wages
 
