--- a/images/ruot-nem-korea-120x190x09/config.ini
+++ b/images/ruot-nem-korea-120x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-120x190x09.html
 lastopen = 2024-06-10 11:55:00
 
 [search]
-lastsearch = 2024-07-10 17:35:49
+lastsearch = 2024-07-10 22:54:27
 
 [www.diepxuan.com]
 match = -12.0%%
@@ -27,8 +27,8 @@ title = Why North Korea’s dumping garbage on South Korea | About ...
 url = https://www.youtube.com/watch?v=SU3JMXEUtgg
 
 [www.ciee.org]
-match = -100.0%%
-title = My experience in being a Black woman in South Korea | CIEE
+match = 0.0%%
+title = 
 url = https://www.ciee.org/go-abroad/college-study-abroad/blog/my-experience-being-black-woman-south-korea
 
 [travel.gc.ca]
