CI images update

--- a/images/nem-dreamland-uc-160x200x09/config.ini
+++ b/images/nem-dreamland-uc-160x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-dreamland-uc-160x200x09.html
 lastopen = 2024-06-07 01:35:10
 
 [search]
-lastsearch = 2024-07-10 20:44:26
+lastsearch = 2024-07-10 23:21:33
 
 [www.diepxuan.com]
 match = 51.9%%
@@ -50,4 +50,19 @@ url = https://maxima.org/forums/audio-electronics/568090-12-ib-install-plenty-pi
 match = -77.8%%
 title = Comparing two estimates -- can someone tell me how to ...
 url = https://hvac-talk.com/vbb/threads/2161891-Comparing-two-estimates-can-someone-tell-me-how-to-choose
+
+[forum.mattressunderground.com]
+match = -14.8%%
+title = Ten years later, back at tMUG for recs!
+url = https://forum.mattressunderground.com/t/ten-years-later-back-at-tmug-for-recs/37390
+
+[m.youtube.com]
+match = -3.7%%
+title = Dream Shop Pt 8 The Perfect Flush
+url = https://m.youtube.com/watch?v=NPWGvzj-j_c
+
+[www.audioasylum.com]
+match = 8.3%%
+title = Upgrading from AT 150MLX
+url = https://www.audioasylum.com/cgi/vt.mpl?f=vinyl&m=1192383
 
