--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-07-10 22:46:46
+lastsearch = 2024-07-10 23:22:06
 
 [everonvn.com.vn]
-match = -114.3%%
-title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity ...
+match = -133.3%%
+title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity màu ...
 url = https://everonvn.com.vn/everon/611/bo-everon-es1807
 
 [www.everonqb.com]
 match = -9.5%%
-title = Everon Quảng Bình Ga phủ EPM19043 180x200
-url = https://www.everonqb.com/ga-phu-epm19043-180x200.html
+title = Everon Quảng Bình Ga phủ EPC19056 160x200
+url = https://www.everonqb.com/ga-phu-epc19056-160x200.html
 
 [www.diepxuan.com]
 match = 100.0%%
