--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-07-10 22:34:00
+lastsearch = 2024-07-10 23:20:56
 
 [www.youtube.com]
 match = -420.0%%
@@ -32,9 +32,9 @@ title = List of acupuncture points
 url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 
 [twitter.com]
-match = -290.0%%
-title = cutiesai 🌷 working on 14DWY! (@cutiesigh) / ...
-url = https://twitter.com/cutiesigh?lang=en
+match = -430.0%%
+title = Ren 14 🏴󠁧󠁢󠁥󠁮󠁧󠁿 🏴󠁧󠁢󠁷󠁬󠁳󠁿slice of 🍈 on X: "Fucking embarrassment grown man ...
+url = https://twitter.com/ScottRen14/status/1787896938110820854
 
 [www.facebook.com]
 match = -400.0%%
