--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-07-10 12:13:34
+lastsearch = 2024-07-10 23:21:44
 
 [demxanh.com]
 match = -22.7%%
@@ -42,8 +42,8 @@ title = Thảm trải sàn phòng khách trẻ trung năng động TBD2582
 url = https://flexhouse.vn/tham-trai-san-phong-khach-tre-trung-nang-dong-tbd2582
 
 [www.diepxuan.com]
-match = 40.9%%
-title = Thảm giường nỉ 150x190 - Điệp Xuân
+match = 50.0%%
+title = Điệp Xuân Thảm giường nỉ 150x190
 url = https://www.diepxuan.com/tham-giuong-ni-150x190.html
 
 [www.lazada.vn]
@@ -53,8 +53,8 @@ url = https://www.lazada.vn/tag/tham-trai-sofa/
 
 [tiki.vn]
 match = -86.4%%
-title = Thảm trải sàn phòng khách 2m x 2m hàng chính hãng ...
-url = https://tiki.vn/search?q=thảm trải sàn phòng khách 2m x 2m
+title = Thảm trải sàn phòng khách hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=thảm trải sàn phòng khách
 
 [cafeland.vn]
 match = -45.5%%
