--- a/images/chieu-cay-cao-bang-a-15/config.ini
+++ b/images/chieu-cay-cao-bang-a-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-15.html
 lastopen = 2024-06-09 22:30:31
 
 [search]
-lastsearch = 2024-07-10 21:46:15
+lastsearch = 2024-07-10 23:39:57
 
 [demxanh.com]
-match = -21.7%%
-title = Chiếu Trúc Cao Bằng Cao Sơn chính hãng - Hà Nội
-url = https://demxanh.com/chieu-truc-cao-bang.html
+match = 30.4%%
+title = Chiếu Trúc Cao Bằng Tây Bắc giá rẻ
+url = https://demxanh.com/chieu-truc-cao-bang-tay-bac.html
 
 [www.diepxuan.com]
 match = 21.7%%
