--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-07-10 22:54:13
+lastsearch = 2024-07-10 23:41:37
 
 [www.youtube.com]
-match = -48.0%%
-title = Đài Loan Tung Chiêu Bóp Nghẹt Dã Tâm Của Trung Quốc
-url = https://www.youtube.com/watch?v=0--4nk6XRjE
+match = -162.5%%
+title = Rạp Phim
+url = https://www.youtube.com/channel/UCvr7Q7pSDqgNId1VecgMSmA
 
 [www.voatiengviet.com]
 match = -92.0%%
