--- a/images/ga-ni-long-2m-x-2m2/config.ini
+++ b/images/ga-ni-long-2m-x-2m2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-2m-x-2m2.html
 lastopen = 2024-06-09 23:13:19
 
 [search]
-lastsearch = 2024-07-10 21:36:51
+lastsearch = 2024-07-10 23:37:17
 
 [www.diepxuan.com]
 match = 36.8%%
@@ -17,9 +17,9 @@ title = GA CHỐNG THẤM 2M X 2M2 ( LOẠI 1 DÀY DẶN )
 url = https://shopee.vn/GA-CHỐNG-THẤM-2M-X-2M2-(-LOẠI-1-DÀY-DẶN-)-i.13475819.120666839
 
 [www.lazada.vn]
-match = -136.8%%
-title = Bộ chăn ga nỉ lông tim cao cấp, bộ ga giường nỉ nhung 4 ...
-url = https://www.lazada.vn/products/bo-chan-ga-ni-long-tim-cao-cap-bo-ga-giuong-ni-nhung-4-mon-phu-chun-1m-1m2-1m4-1m5-1m6-1m8-2mx2m-2m2-i2323748729.html
+match = 21.1%%
+title = GA CHỐNG THẤM CAO CẤP 2m x 2m2
+url = https://www.lazada.vn/products/ga-chong-tham-cao-cap-2m-x-2m2-i1990801523.html
 
 [demgiare.net]
 match = 5.3%%
@@ -115,4 +115,9 @@ url = https://www.quora.com/How-feasible-would-it-be-to-walk-from-NY-to-FL
 match = -136.8%%
 title = Gaugeable Tube Fittings and Adapter Fittings (MS-01-140
 url = https://www.swagelok.com/downloads/webcatalogs/en/ms-01-140.pdf
+
+[www.gazettextra.com]
+match = -142.1%%
+title = McIlroy trying to move on from devastating US Open loss
+url = https://www.gazettextra.com/sports/national/mcilroy-trying-to-move-on-from-devastating-us-open-loss/article_e97d2d6b-e0f8-54bc-80ed-6aa0e9d0f134.html
 
