--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-10 23:22:29
+lastsearch = 2024-07-10 23:35:14
 
 [screenrant.com]
 match = 0.0%%
@@ -357,8 +357,8 @@ title = Blue Bottle Coffee | Fresh Roasted Specialty Coffee
 url = https://bluebottlecoffee.com/
 
 [environment.ec.europa.eu]
-match = -142.9%%
-title = European Green Capital Award - Environment
+match = -242.9%%
+title = European Green Capital Award - Environment.ec.europa.eu.
 url = https://environment.ec.europa.eu/topics/urban-environment/european-green-capital-award_en
 
 [www.cyberlink.com]
@@ -375,4 +375,9 @@ url = https://www.foodnetwork.com/fn-dish/recipes/why-you-should-have-burger-eng
 match = -135.7%%
 title = ÁO BÓNG ĐÁ LIVERPOOL 2019 2020 MÀU XANH
 url = https://www.bernzomatic.com/appihamo/53yBB.xml
+
+[education.nationalgeographic.org]
+match = -178.6%%
+title = A Whopping 91 Percent of Plastic Isn't Recycled
+url = https://education.nationalgeographic.org/resource/whopping-91-percent-plastic-isnt-recycled/
 
