--- a/images/nem-pyeoda-thuong-16/config.ini
+++ b/images/nem-pyeoda-thuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-16.html
 lastopen = 2024-06-18 17:43:07
 
 [search]
-lastsearch = 2024-07-10 20:22:42
+lastsearch = 2024-07-10 23:37:05
 
 [changagoidemtamhao.com]
 match = -10.0%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối Singapore Gold 5 gối Pyeoda 16
 url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-16.html
 
 [demxanh.com]
-match = -75.0%%
-title = Chăn ga gối Tencel Pyeoda Hàn Quốc đa sắc 5 món 16
-url = https://demxanh.com/chan-ga-goi-tencel-pyeoda-han-quoc-da-sac-5-mon-16.html
+match = -100.0%%
+title = Ga gối chun chần Tencel Pyeoda Hàn Quốc đa sắc 3 món 16
+url = https://demxanh.com/ga-goi-chun-chan-tencel-pyeoda-han-quoc-da-sac-3-mon-16.html
 
 [www.facebook.com]
 match = -45.0%%
@@ -47,8 +47,8 @@ title = Ăn Chơi Hải Phòng - BEATVN
 url = https://m.facebook.com/groups/haiphongbeatvn/posts/2033083963789253/
 
 [www.diepxuan.com]
-match = 40.0%%
-title = Nệm Pyeoda thường 16 - Điệp Xuân
+match = 50.0%%
+title = Điệp Xuân Nệm Pyeoda thường 16
 url = https://www.diepxuan.com/nem-pyeoda-thuong-16.html
 
 [pyeoda.vn]
