--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-07-10 16:13:47
+lastsearch = 2024-07-10 23:35:23
 
 [www.tiktok.com]
 match = -231.2%%
@@ -32,8 +32,8 @@ title = Nhu shop | Binh Dinh
 url = https://m.facebook.com/p/Nhu-shop-100036848391375/?locale=is_IS
 
 [www.diepxuan.com]
-match = -93.8%%
-title = Nệm bông - Chăn ga gối đệm Điệp Xuân
+match = -150.0%%
+title = Điệp Xuân Nệm bông - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/nem-bong.html?p=2
 
 [diepxuan.com]
