--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-07-10 11:36:03
+lastsearch = 2024-07-10 23:42:48
 
 [www.lazada.vn]
-match = -26.7%%
-title = Vỏ Gối ôm Vuông Giá Tốt T04/2024
-url = https://www.lazada.vn/tag/vo-goi-om-vuong/
+match = -180.0%%
+title = (CIYS)vỏ Gối In Hình Cờ Úc Hoa Kỳ Vỏ Gối Vải Nhung ...
+url = https://www.lazada.vn/products/ciysvo-goi-in-hinh-co-uc-hoa-ky-vo-goi-vai-nhung-long-ngan-sieu-mem-vo-goi-ke-45x45-vo-goi-trang-tri-noi-that-sofa-i2001355874.html
 
 [shopee.vn]
 match = -140.0%%
