--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-07-10 23:21:44
+lastsearch = 2024-07-10 23:46:36
 
 [demxanh.com]
-match = -22.7%%
-title = Thảm trải giường lông cừu TLC 06 - Hà Nội
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
+match = -4.5%%
+title = Thảm trải giường cao su non màu hồng
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-hong.html
 
 [demre.com.vn]
 match = 18.2%%
@@ -67,9 +67,9 @@ title = Đệm bông ép Everon 1m5 (1.5m) | Chính hãng, Giá tốt tại ...
 url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-1m5.html
 
 [shopee.vn]
-match = -100.0%%
-title = Thảm phòng khách - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/thảm/phòng khách
+match = -54.5%%
+title = thảm trải sàn giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=thảm trải sàn
 
 [www.kymdan.com]
 match = -18.2%%
