--- a/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-200x220-tr.html
 lastopen = 2024-06-07 00:24:25
 
 [search]
-lastsearch = 2024-07-10 16:44:33
+lastsearch = 2024-07-10 23:49:56
 
 [everon.online]
 match = 50.0%%
@@ -22,9 +22,9 @@ title = Mua Bộ ga chun chần bốn mùa Everon EPC22045 ( 01 ...
 url = https://tiki.vn/bo-ga-chun-chan-bon-mua-everon-epc22045-01-ga-chun-chan-01-chan-bon-mua-200x220-02-vo-goi-45x65-p132829385.html?spid=132829392
 
 [everonhanquoc.com.vn]
-match = -8.8%%
-title = Bộ chăn ga Everon EPM-22060 tone màu ghi đậm và nhạt
-url = https://everonhanquoc.com.vn/bo-chan-ga-everon-epm-22060-pd.html
+match = 0.0%%
+title = Bộ chăn ga Everon ESM - 24014 - "CHÂN TRỜI XANH"
+url = https://everonhanquoc.com.vn/bo-chan-ga-everon-esm-24014-pd.html
 
 [everonhn.com.vn]
 match = 25.0%%
