--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-10 20:36:51
+lastsearch = 2024-07-10 23:50:08
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -27,9 +27,9 @@ title = Chiếu Lác: Nơi bán giá rẻ, uy tín, chất lượng nhất
 url = https://websosanh.vn/s/chiếu+lác.htm
 
 [www.youtube.com]
-match = -175.0%%
-title = MLBB | LẠC KEY VỀ VIỆT NAM, TỐP MỠ ĐỐI ĐẦU NGƯỜI ...
-url = https://www.youtube.com/watch?v=me0dvgGuCGs
+match = -212.5%%
+title = [TV] Gấm Kami VS Uyên Phương | GIẢI POOL 9 BI HBSF II ...
+url = https://www.youtube.com/watch?v=Ir7sFOF1oOY
 
 [tuyensinh247.com]
 match = -225.0%%
