--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-10 22:30:58
+lastsearch = 2024-07-10 23:45:31
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -72,9 +72,9 @@ title = Gà ủ rũ chết dần, cứu chữa ra sao? | VTC16
 url = https://www.youtube.com/watch?v=1zJIopY7o00
 
 [books.google.com]
-match = -250.0%%
-title = Ngô Thì Nhậm, tác phẩm - Volume 1 - Page 83 - Google Books Result
-url = https://books.google.com/books?id=cYNkAAAAMAAJ&pg=PA83&lpg=PA83&dq=chieu+lac+soc+16&source=bl&ots=cgSUDlYY7d&sig=ACfU3U1CWhSh4rmEkkAs4vGMOvDFlp0j0Q&hl=en&sa=X&ved=2ahUKEwjOu5jzuZKHAxXOD1kFHTBSAkMQ6AF6BAgWEAM
+match = -212.5%%
+title = Đại doàn kết - Issues 9-29 - Page 20 - Google Books Result
+url = https://books.google.com/books?id=_yPpAAAAMAAJ&pg=RA4-PA20&lpg=RA4-PA20&dq=chieu+lac+soc+16&source=bl&ots=fHS1PWWum7&sig=ACfU3U2wNdMq3cMGd8cXVZB3Lg9BjbR__w&hl=en&sa=X&ved=2ahUKEwjxpN_-9ZyHAxX9FVkFHUD-CLIQ6AF6BAgXEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
@@ -425,4 +425,9 @@ url = https://baocaovien.vn/tin-tuc/thong-tin-chi-tiet-ve-16-van-dong-vien-viet-
 match = 0.0%%
 title = Tìm đường xe buýt
 url = http://timbus.vn/
+
+[www.noibaiairport.vn]
+match = -20.0%%
+title = chuyến bay
+url = https://www.noibaiairport.vn/vi/departures
 
