--- a/images/tui-warmdream-180x200x14/config.ini
+++ b/images/tui-warmdream-180x200x14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-180x200x14.html
 lastopen = 2024-06-17 10:46:26
 
 [search]
-lastsearch = 2024-07-10 20:21:22
+lastsearch = 2024-07-10 23:53:03
 
 [www.diepxuan.com]
 match = 10.5%%
@@ -12,9 +12,9 @@ title = Túi nệm - Điệp Xuân
 url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [www.amazon.com]
-match = -104.2%%
-title = Bed Tent Dream Tents Bed Canopy Shelter Cabin Indoor ...
-url = https://www.amazon.com/Shelter-Breathable-PitchBlack-Mattress-Included/dp/B07WR6JV9N
+match = -50.0%%
+title = Amazon.com: Customer Questions & Answers
+url = https://www.amazon.com/ask/questions/Tx1GZ5EJCU0MQZ/
 
 [m.facebook.com]
 match = -50.0%%
