CI images update

--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-11 00:46:33
+lastsearch = 2024-07-11 01:46:17
 
 [www.georgianicols.com]
 match = -69.2%%
@@ -52,9 +52,9 @@ title = CDL Licensing Information FAQs | Georgia Department of ...
 url = https://dds.georgia.gov/cdl-licensing-information-faqs
 
 [www.instagram.com]
-match = -10.0%%
-title = sylviagani
-url = https://www.instagram.com/sylviagani/?hl=en
+match = -207.7%%
+title = GANI (@ganistudios) • Instagram photos and videos
+url = https://www.instagram.com/ganistudios/
 
 [www.nebf.com]
 match = -46.2%%
@@ -430,4 +430,9 @@ url = https://meetings.aps.org/Meeting/MAR17/Session/V28.1
 match = -7.7%%
 title = Georgia Recording Law
 url = http://www.dmlp.org/legal-guide/georgia-recording-law
+
+[www.gcpsk12.org]
+match = -123.1%%
+title = Gwinnett County Public Schools: Home
+url = https://www.gcpsk12.org/
 
