--- a/images/chieu-lac-90x100/config.ini
+++ b/images/chieu-lac-90x100/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-90x100.html
 lastopen = 2024-06-20 22:28:06
 
 [search]
-lastsearch = 2024-07-11 01:37:37
+lastsearch = 2024-07-11 01:51:47
 
 [anlacphat.com]
 match = -118.8%%
@@ -12,9 +12,9 @@ title = Đèn Led Chiếu Điểm Thanh Ray DIA807 5W Duhal
 url = https://anlacphat.com/den-led-chieu-diem-thanh-ray-dia807-5w-duhal/
 
 [thacoanlac.vn]
-match = -50.0%%
-title = FD990A-4WD
-url = https://thacoanlac.vn/forland-fd990a-4wd
+match = -180.0%%
+title = FD990
+url = https://thacoanlac.vn/forland-fd900
 
 [vietnamese.alibaba.com]
 match = -256.2%%
@@ -90,4 +90,9 @@ url = https://shopee.vn/Khăn-Tắm-Đa-Năng-PUKID-6-Lớp-Cotton-Tre-Cao-Cấp
 match = 31.2%%
 title = Chiếu lạc - Hưng Liên
 url = http://hunglien.net/san-pham/chieu-lac/
+
+[www.dpreview.com]
+match = -175.0%%
+title = 90mm or 100mm Prime: Micro Four Thirds Talk Forum
+url = https://www.dpreview.com/forums/thread/4232050
 
