--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-10 23:34:27
+lastsearch = 2024-07-11 01:54:25
 
 [www.tiktok.com]
 match = -170.6%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -194.1%%
-title = Diccionario geográfico universal, 4: dedicado a la Reina ...
-url = https://books.google.com/books?id=eKu8rfmV-_cC&pg=PA628&lpg=PA628&dq=man+in+hoa+dep+16&source=bl&ots=wlVWC2ZrnM&sig=ACfU3U1fAdOEHOdS-5vjQegdkbxlkh8tXQ&hl=en&sa=X&ved=2ahUKEwjxpLPC85yHAxWdF1kFHcCvD7AQ6AF6BAgVEAM
+match = -123.5%%
+title = The army list - Page 463 - Google Books Result
+url = https://books.google.com/books?id=YvANAAAAQAAJ&pg=RA1-PA463&lpg=RA1-PA463&dq=man+in+hoa+dep+16&source=bl&ots=KC67poOTQI&sig=ACfU3U33U8Q8PaqaOj1JjUZhpbsakm5jtg&hl=en&sa=X&ved=2ahUKEwjuztDmkp2HAxXOnokEHbLGBkoQ6AF6BAgbEAM
 
 [tax.vermont.gov]
 match = -29.4%%
