CI images update

--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-10 20:35:36
+lastsearch = 2024-07-11 02:18:34
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -227,9 +227,9 @@ title = STT yêu đời, lạc quan, vui vẻ, ngắn gọn tạo động lực
 url = https://tiki.vn/blog/stt-yeu-doi/
 
 [books.google.com]
-match = -200.0%%
-title = Oxford Picture Dictionary English-Vietnamese Edition: ...
-url = https://books.google.com/books?id=malaCgAAQBAJ&pg=PA292&lpg=PA292&dq=chieu+lac+gam+16&source=bl&ots=9HFIUJ5ze4&sig=ACfU3U2dk2UEsxDkQHMlUDBufjLLreljZg&hl=en&sa=X&ved=2ahUKEwizi6qgyPeGAxUfADQIHawbARwQ6AF6BAgcEAM
+match = -231.2%%
+title = Tạp chí cộng sản: cơ quan lý luận và chính trị của Đảng cộng ...
+url = https://books.google.com/books?id=HqOaAAAAIAAJ&pg=RA3-PA86&lpg=RA3-PA86&dq=chieu+lac+gam+16&source=bl&ots=oINfXdql5u&sig=ACfU3U3oZ5S0-1KFmmMiFNFRJGVYyJYw2w&hl=en&sa=X&ved=2ahUKEwiA9NaZmJ2HAxUaFFkFHc1YCPoQ6AF6BAgTEAM
 
 [timbus.vn]
 match = -27.3%%
