--- a/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-18.html
 lastopen = 2024-06-10 00:19:48
 
 [search]
-lastsearch = 2024-07-11 01:37:16
+lastsearch = 2024-07-11 02:16:34
 
 [demxanh.com]
 match = 11.8%%
@@ -12,9 +12,9 @@ title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
 url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [shopee.vn]
-match = 26.5%%
-title = CHIỀU ĐIỀU HOÀ CAO SU NON COCO TẶNG KÈM 2 VỎ ...
-url = https://shopee.vn/CHIỀU-ĐIỀU-HOÀ-CAO-SU-NON-COCO-TẶNG-KÈM-2-VỎ-GỐI-ĐẦU-(-HÀNG-NHẬP-KHẨU-CAO-CẤP-)-i.426167051.25063833023
+match = 35.3%%
+title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
+url = https://shopee.vn/list/chiếu điều hòa
 
 [foreverbedding.net]
 match = 32.4%%
