--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-10 22:33:24
+lastsearch = 2024-07-11 02:18:59
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftleoJIri9&sig=ACfU3U0ETrGvan-t7HW7-iHRf54veTBytQ&hl=en&sa=X&ved=2ahUKEwjAl8Tv5ZyHAxWCFmIAHc2WCl0Q6AF6BAgUEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftleoKMmle&sig=ACfU3U1lVIBtn9a6hZLNL3g8NyP5ATW04Q&hl=en&sa=X&ved=2ahUKEwjI4rqlmJ2HAxV9EVkFHd-3BDwQ6AF6BAgVEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
@@ -122,9 +122,9 @@ title =
 url = https://www.reddit.com/r/makinghiphop/comments/1xxaoc/what_is_16_bars_really/
 
 [cca.hawaii.gov]
-match = -300.0%%
-title = Hawaii Administrative Rules Title 16 Chapter 115
-url = https://cca.hawaii.gov/pvl/files/2013/08/har_115-c1.pdf
+match = -120.0%%
+title = chapter 84 massage therapy
+url = https://cca.hawaii.gov/pvl/files/2013/08/har_84-c2.pdf
 
 [www.uscis.gov]
 match = -430.0%%
