--- a/images/tham-ghe-1m7roi/config.ini
+++ b/images/tham-ghe-1m7roi/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-1m7roi.html
 lastopen = 2024-06-07 00:15:10
 
 [search]
-lastsearch = 2024-07-11 01:45:09
+lastsearch = 2024-07-11 02:14:57
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,8 +12,8 @@ title = thảm ghế 1m7rời
 url = https://www.diepxuan.com/tham-ghe-1m7roi.html
 
 [www.facebook.com]
-match = -220.0%%
-title = LIFE MENTOR - CHA MẸ DẪN LỐI | **KHÁM PHÁ GỐC RỄ CỦA ...
+match = -193.3%%
+title = LIFE MENTOR - CHA MẸ DẪN LỐI | **KHÁM PHÁ GỐC RỄ ...
 url = https://www.facebook.com/groups/lifementor2021/posts/1856300418163208/
 
 [voz.vn]
