--- a/images/tham-giuong-bo-de-14/config.ini
+++ b/images/tham-giuong-bo-de-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-14.html
 lastopen = 2024-06-10 01:25:14
 
 [search]
-lastsearch = 2024-07-10 20:49:03
+lastsearch = 2024-07-11 02:20:05
 
 [erado.vn]
 match = 0.0%%
@@ -152,8 +152,8 @@ title = Giường ngủ tích hợp kệ sách trang trí và bàn làm việc G
 url = https://zatafu.com/giuong-ngu-tich-hop-ke-sach-trang-tri-va-ban-lam-viec-gg-14
 
 [giuongngugiare.vn]
-match = 35.0%%
-title = giường ngủ giá rẻ 14
+match = -65.0%%
+title = giường ngủ giá rẻ 14 - Nội Thất Công Hậu
 url = https://giuongngugiare.vn/giuong-ngu-gia-re-14
 
 [mdland.com.vn]
