--- a/images/tham-giuong-loai-2-15/config.ini
+++ b/images/tham-giuong-loai-2-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-15.html
 lastopen = 2024-06-07 00:36:25
 
 [search]
-lastsearch = 2024-07-11 01:50:07
+lastsearch = 2024-07-11 02:19:54
 
 [shopee.vn]
-match = -100.0%%
-title = Thảm chiếu đa năng trải sàn trải giường loại mỏng dùng 4 ...
-url = https://shopee.vn/Thảm-chiếu-đa-năng-trải-sàn-trải-giường-loại-mỏng-dùng-4-mùa.-tấm-trải-nệm-mỏng-i.78513158.10635430597
+match = -61.9%%
+title = TẤM LÓT TRẢI GIƯỜNG SPA, PHUN XĂM DÙNG 1 LẦN ...
+url = https://shopee.vn/TẤM-LÓT-TRẢI-GIƯỜNG-SPA-PHUN-XĂM-DÙNG-1-LẦN-DÀY-DẶN-(-2-LOẠI-THOÁNG-KHÍ-CHỐNG-NƯỚC-CHỐNG-DẦU)-i.39985545.2514311987
 
 [khosibaclieu.com]
 match = -9.5%%
@@ -37,9 +37,9 @@ title = Kích Thước Đệm Everon Tiêu Chuẩn Và Chăn Ga Gối Giường 
 url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
 
 [comehome.com.vn]
-match = -119.0%%
-title = 15 Mẫu giường ngủ đôi kích thước chuẩn, đẹp, giá rẻ nhất ...
-url = https://comehome.com.vn/blog/post/giuong-ngu-doi
+match = -90.5%%
+title = Kích thước giường ngủ tiêu chuẩn, thông dụng nhất 2024
+url = https://comehome.com.vn/blog/post/kich-thuoc-giuong-ngu
 
 [www.kymdan.com]
 match = 14.3%%
@@ -130,4 +130,9 @@ url = https://noithatlamson.com/mau-tu-dau-giuong-2-ngan-keo-gia-re-chat-luong/
 match = -100.0%%
 title = 5 loại thảm trải giường hot nhất hiện nay 2022 - CafeLand.Vn
 url = https://cafeland.vn/xu-huong/5-loai-tham-trai-giuong-hot-nhat-hien-nay-112172.html
+
+[smartdecor.vn]
+match = -61.9%%
+title = Top 15+ Mẫu Tủ Đầu Giường Đẹp & Báo Giá Mới Nhất
+url = https://smartdecor.vn/mau-tu-dau-giuong-dep/
 
