CI images update

--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-11 01:23:51
+lastsearch = 2024-07-11 02:36:00
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -134,7 +134,7 @@ url = https://wildrift.leagueoflegends.com/en-us/
 [books.google.com]
 match = -135.0%%
 title = The Japan Daily Mail - Page 194 - Google Books Result
-url = https://books.google.com/books?id=63Q9AQAAMAAJ&pg=RA1-PA194&lpg=RA1-PA194&dq=ruot+nem+korea+9f+12&source=bl&ots=-bek0lCQiS&sig=ACfU3U0UrPB55hqFlT6A5S9Rv5XKu6DJzA&hl=en&sa=X&ved=2ahUKEwjI9r38i52HAxXFMlkFHYcOCAcQ6AF6BAgXEAM
+url = https://books.google.com/books?id=63Q9AQAAMAAJ&pg=RA1-PA194&lpg=RA1-PA194&dq=ruot+nem+korea+9f+12&source=bl&ots=-bek0mxJlR&sig=ACfU3U3CjtqRosn20IYi2eOwxRHvFznzaQ&hl=en&sa=X&ved=2ahUKEwimuNiMnJ2HAxXSFFkFHXZ_Dj4Q6AF6BAgYEAM
 
 [thehill.com]
 match = -105.0%%
