--- a/images/chieu-cay-cao-bang-a-12/config.ini
+++ b/images/chieu-cay-cao-bang-a-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-12.html
 lastopen = 2024-06-09 23:04:00
 
 [search]
-lastsearch = 2024-07-11 00:45:04
+lastsearch = 2024-07-11 02:30:38
 
 [chieutruc.info]
 match = -73.9%%
@@ -17,14 +17,14 @@ title = Chiếu Trúc Cao Bằng Tây Bắc giá rẻ
 url = https://demxanh.com/chieu-truc-cao-bang-tay-bac.html
 
 [chieutrucsaigon.com]
-match = 43.5%%
-title = CHIẾU TRÚC THANH CAO BẰNG 1M6X2M
-url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m6x2m.html
+match = -13.0%%
+title = Chiếu trúc thanh cao bằng 1m4 loại 1 chất lượng
+url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m4x2m.html
 
 [shopee.vn]
-match = -60.9%%
-title = Chiếu trúc tre Tây Bắc Cao Bằng loại đẹp (Mát Lạnh Mùa Hè)
-url = https://shopee.vn/Chiếu-trúc-tre-Tây-Bắc-Cao-Bằng-loại-đẹp-(Mát-Lạnh-Mùa-Hè)-i.239730392.7634523024
+match = -65.2%%
+title = Chiếu trúc cây cao bằng sịn hàng loại 1 (chiếu 2x2.2 liên ...
+url = https://shopee.vn/Chiếu-trúc-cây-cao-bằng-sịn-hàng-loại-1-(chiếu-2x2.2-liên-hệ-với-shop-)-i.68883759.1152873373
 
 [www.lazada.vn]
 match = 21.7%%
@@ -32,9 +32,9 @@ title = Chiếu cao bằng Việt Nam 1.2 X 1.95
 url = https://www.lazada.vn/products/chieu-cao-bang-viet-nam-12-x-195-i2173902354-s10284366594.html?&search=pdp_same_topselling?mp=1&scm=1007.16389.286994.0&clickTrackInfo=ae2e58a3-3b1f-4f66-b29a-908b313d47ba__2173902354__13045__shop__224806__0.5813963__0.5813963__0.0__0.0__0.0__0.5813963__1__null__null__null__null__null__null____560000.0__0.0__0.0__0__560000.0__113326__null__null__null__3650.16545_955.7331__null__13426__null__0.0__0.0________null__null&spm=a211g0.pdp.recommend_1.2
 
 [chieu.com.vn]
-match = 0.0%%
-title = Chiếu trúc Cao Bằng loại 1 kích cỡ 1m6 x 2m
-url = http://chieu.com.vn/san-pham/chieu-truc-cao-bang-1m6/
+match = -4.3%%
+title = Chiếu trúc Cao Bằng loại 1 kích cỡ 1m2 x 1m9
+url = http://chieu.com.vn/san-pham/chieu-truc-cao-bang-loai-1-kich-co-1m2-x-1m9/
 
 [suongtuyet.com]
 match = 56.5%%
