--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-11 02:19:43
+lastsearch = 2024-07-11 02:31:10
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Hướng dẫn đo size lắc và vòng tay
 url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [www.facebook.com]
-match = -187.5%%
-title = 08-11-2022 Thời sự chiều 18h30 | By Truyền Hình Sóc Trăng
-url = https://www.facebook.com/soctrangtv/videos/08-11-2022-thời-sự-chiều-18h30/1168759537402748/
+match = 6.7%%
+title = Người Việt Cali
+url = https://www.facebook.com/groups/groupnguoivietcali/
 
 [thuvienphapluat.vn]
 match = -206.2%%
@@ -282,9 +282,9 @@ title = Địa chấn lớn nhất EURO 2024: Georgia đánh bại Bồ Đào ..
 url = https://baolongan.vn/dia-chan-lon-nhat-euro-2024-georgia-danh-bai-bo-dao-nha-khien-ronaldo-hoan-toan-tat-tieng-a178337.html
 
 [vietstock.vn]
-match = -231.2%%
-title = Phân tích kỹ thuật phiên chiều 08/07: Thị trường diễn biến ...
-url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-0807-thi-truong-dien-bien-giang-co-585-1205437.htm
+match = -212.5%%
+title = Phân tích kỹ thuật phiên chiều 09/07: Tâm lý lạc quan dần ...
+url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-0907-tam-ly-lac-quan-dan-quay-lai-585-1205716.htm
 
 [baohungyen.vn]
 match = -200.0%%
@@ -595,4 +595,9 @@ url = https://www.aeon.com.vn/
 match = -20.0%%
 title = chuyến bay
 url = https://www.noibaiairport.vn/vi/departures
+
+[daibieunhandan.vn]
+match = -193.8%%
+title = 8 trường hợp tiếp xúc gần ca bệnh bạch hầu ở Bắc Giang ...
+url = https://daibieunhandan.vn/suc-khoe/8-truong-hop-tiep-xuc-gan-ca-benh-bach-hau-o-bac-giang-co-ket-qua-am-tinh-i379518/
 
