--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-07-10 23:20:56
+lastsearch = 2024-07-11 02:32:07
 
 [www.youtube.com]
 match = -420.0%%
@@ -97,9 +97,9 @@ title =
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8733268/
 
 [www.tiktok.com]
-match = 0.0%%
-title = Ren from 14 Days
-url = https://www.tiktok.com/discover/ren-from-14-days
+match = -70.0%%
+title = Ren 14 Days with You
+url = https://www.tiktok.com/discover/ren-14-days-with-you
 
 [nordicanglers.com]
 match = -120.0%%
