CI images update

--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-07-11 02:31:44
+lastsearch = 2024-07-11 02:47:48
 
 [bilystore.vn]
 match = -95.2%%
@@ -17,9 +17,9 @@ title = thảm trải giường giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=thảm trải giường
 
 [tiki.vn]
-match = -14.3%%
-title = Mua Thảm trải giường lông cừu hàng loại 1
-url = https://tiki.vn/tham-trai-giuong-long-cuu-hang-loai-1-p85050283.html?spid=128675218
+match = -38.1%%
+title = Thảm trải giường hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=thảm trải giường
 
 [www.everonvn.vn]
 match = 9.5%%
@@ -122,9 +122,9 @@ title = giường gấp, giường xếp, giuong gap, giuong xep
 url = https://giuongxep.com/
 
 [www.lazada.vn]
-match = -95.2%%
-title = Thảm chiếu đa năng trải sàn trải giường loại mỏng dùng 4 ...
-url = https://www.lazada.vn/products/tham-chieu-da-nang-trai-san-trai-giuong-loai-mong-dung-4-mua-tam-trai-nem-mong-i1847998961.html
+match = -23.8%%
+title = Thảm trải giường nỉ nhung hàng đẹp loại 1
+url = https://www.lazada.vn/products/tham-trai-giuong-ni-nhung-hang-dep-loai-1-i472246006.html
 
 [bvhungvuong.vn]
 match = -85.7%%
