--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-11 02:18:00
+lastsearch = 2024-07-11 02:49:33
 
 [en.wikipedia.org]
-match = -16.7%%
-title = Kikuko Inoue
-url = https://en.wikipedia.org/wiki/Kikuko_Inoue
+match = 0.0%%
+title = 
+url = https://en.wikipedia.org/wiki/Chan_Mali_Chan
 
 [kpop.fandom.com]
 match = -47.1%%
