--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-07-11 02:35:49
+lastsearch = 2024-07-11 02:45:51
 
 [shopee.vn]
-match = -60.0%%
-title = Màn chụp đỉnh vuông cao cấp,mùng tự bung đẹp tiện dụng ...
-url = https://shopee.vn/Màn-chụp-đỉnh-vuông-cao-cấp-mùng-tự-bung-đẹp-tiện-dụng-màn-ngủ-để-giường-thông-minh-mùng-mắt-nhỏ-chống-muỗi-có-viền-i.1102783201.17899383858
+match = -8.0%%
+title = mùng chụp tự bung đỉnh vuông giá tốt Tháng 7, 2024
+url = https://shopee.vn/search?keyword=mùng chụp tự bung đỉnh vuông
 
 [munghoangphat.com]
 match = 48.0%%
@@ -22,9 +22,9 @@ title = Mùng Bảo Bảo | Mùng Chụp Tự Bung Đỉnh Vuông Giá tốt 202
 url = https://www.mungbaobao.com/
 
 [tiki.vn]
-match = -24.0%%
-title = Mua Màn ngủ tự bung đỉnh vuông gấp gọn, Mùng Chụp, ...
-url = https://tiki.vn/man-ngu-tu-bung-dinh-vuong-gap-gon-mung-chup-man-chup-tu-bung-man-ngu-chong-muoi-1m8-x-2m-de-dang-tien-loi-ben-dep-giao-hoa-van-ngau-nhien-p84658079.html?spid=84658085
+match = -8.0%%
+title = Màn đỉnh vuông hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=màn đỉnh vuông
 
 [www.mantubung.com]
 match = -52.0%%
@@ -47,9 +47,9 @@ title = Màn chụp đỉnh vuông Cao Cấp EASY DREAM
 url = https://easydream.vn/man-chup-dinh-vuong-31-11.html
 
 [www.lazada.vn]
-match = 4.0%%
-title = Màn đỉnh Vuông Tự Bung Giá Tốt T05/2024
-url = https://www.lazada.vn/tag/man-dinh-vuong-tu-bung/?page=54
+match = 32.0%%
+title = Mùng Tự Bung đỉnh Vuông Giá Tốt T07/2024
+url = https://www.lazada.vn/tag/mung-tu-bung-dinh-vuong/
 
 [demxanh.com]
 match = 12.0%%
