--- a/images/tam-trai-ks-uc-220-250/config.ini
+++ b/images/tam-trai-ks-uc-220-250/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-220-250.html
 lastopen = 2024-06-07 01:32:07
 
 [search]
-lastsearch = 2024-07-10 23:46:55
+lastsearch = 2024-07-11 02:47:21
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -565,4 +565,9 @@ url = https://www.nrc.gov/docs/ML0736/ML073620360.pdf
 match = -77.3%%
 title = CIVIL ENGINEERS LICENSES ISSUED PRIOR TO 1/1/82
 url = https://bpelsg.ca.gov/pubs/num_eng_82.pdf
+
+[www.youtube.com]
+match = -54.5%%
+title = BCA 22-250 Full Inspection & Field Review
+url = https://www.youtube.com/watch?v=lZZp8HArn0Y
 
