--- a/images/chieu-truc-den-12/config.ini
+++ b/images/chieu-truc-den-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-12.html
 lastopen = 2024-06-07 00:20:09
 
 [search]
-lastsearch = 2024-07-11 00:48:37
+lastsearch = 2024-07-11 03:18:12
 
 [demxanh.com]
 match = -135.3%%
@@ -37,9 +37,9 @@ title = Chiếu trúc hạt ,hàng loại 1 [🚀 ship hỏa tốc]
 url = https://shopee.vn/Chiếu-trúc-hạt-hàng-loại-1-🚀-ship-hỏa-tốc--i.363378833.10326359415
 
 [vongxepsaigon.vn]
-match = 47.1%%
-title = chiếu trúc hạt nâu đen
-url = https://vongxepsaigon.vn/chieu-truc-hat-nau-den/
+match = -188.2%%
+title = Chiếu trúc chiếu tre hạt nâu đen hàng tốt loại 1 - Kích thước ...
+url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-nau-den-hang-tot-loai-1-kich-thuoc-120cm/
 
 [www.diepxuan.com]
 match = -64.7%%
@@ -65,4 +65,9 @@ url = https://chanrathanhthuy.com/tin-tuc/chieu-truc-den-khac-voi-chieu-truc-van
 match = -158.8%%
 title = Mua chiếu trúc, đến ngay Đệm Xanh - Tổng hợp CHIẾU SIÊU ...
 url = https://www.youtube.com/watch?v=FFV6Oqxq3Ds
+
+[chieutrelinhchi.com]
+match = -182.4%%
+title = Chiếu trúc cao cấp Linh Chi, nguyên liệu tre Việt Nam chất ...
+url = https://chieutrelinhchi.com/chieu-truc/38
 
