--- a/images/ga-phu-es1807-180x200/config.ini
+++ b/images/ga-phu-es1807-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-es1807-180x200.html
 lastopen = 2024-06-07 01:02:20
 
 [search]
-lastsearch = 2024-07-11 01:19:11
+lastsearch = 2024-07-11 03:22:14
 
 [everonvn.com.vn]
 match = 4.8%%
@@ -20,4 +20,29 @@ url = https://everonhanoi.vn/san-pham/bo-ep1734/
 match = 100.0%%
 title = Ga phủ ES1807 180x200
 url = https://www.diepxuan.com/ga-phu-es1807-180x200.html
+
+[m.facebook.com]
+match = -147.6%%
+title = Bedo's Leatherworks, LLC - Cigar Indys. WOW. Beautiful...
+url = https://m.facebook.com/bedosleatherworks/posts/2276654379137279/
+
+[www.dootalk.com]
+match = -133.3%%
+title = Suspension question - Millennium Mach Z - Ski Doo Talk
+url = https://www.dootalk.com/threads/suspension-question-millennium-mach-z.843290/
+
+[www.rollitup.org]
+match = -85.7%%
+title = Best Seedbank to order from in US? | Page 9
+url = https://www.rollitup.org/t/best-seedbank-to-order-from-in-us.908367/page-9
+
+[www.reddit.com]
+match = -119.0%%
+title = Sunday Swaps: Destash Listings : r/Indiemakeupandmore
+url = https://www.reddit.com/r/Indiemakeupandmore/comments/t7y96v/sunday_swaps_destash_listings/
+
+[lovepotion.invisionzone.com]
+match = -152.4%%
+title = OCCO - Please review ALL "flavors" in THIS thread - Page 11
+url = https://lovepotion.invisionzone.com/topic/3053-occo-please-review-all-flavors-in-this-thread/page/11/
 
