--- a/images/bo-ga-chun-chan-lua-warmdream-2m-22-hq/config.ini
+++ b/images/bo-ga-chun-chan-lua-warmdream-2m-22-hq/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-lua-warmdream-2m-22-hq.html
 lastopen = 2024-06-09 23:45:19
 
 [search]
-lastsearch = 2024-07-10 23:41:27
+lastsearch = 2024-07-11 03:21:03
 
 [www.museum.ru]
 match = 2.9%%
@@ -15,4 +15,24 @@ url = http://www.museum.ru/future/lmp/link.asp?back=web/default.htm&url=http://x
 match = -2.6%%
 title = TOP 20 địa chỉ bán Chăn Ga Gối Đệm tại Hà Nam uy tín đã ...
 url = https://topnoithat.com/top-20-dia-chi-ban-chan-ga-goi-dem-tai-ha-nam/
+
+[halfwheel.com]
+match = -7.9%%
+title = 22 Minutes to Midnight Connecticut Radiante Toro
+url = https://halfwheel.com/22-minutes-to-midnight-connecticut-radiante-toro/412923/
+
+[www.youtube.com]
+match = -15.8%%
+title = Naoma and the Sundaze- "Ain't Nobody" Chaka Khan cover ...
+url = https://www.youtube.com/watch?v=6rIUsorpgkg
+
+[soundcloud.com]
+match = -18.4%%
+title = Live From: Nation Of Gondwana 2018, Germany [SUNRISE ...
+url = https://soundcloud.com/jonasrathsman/live-from-nation-of-gondwana-2018-sunrise-set
+
+[www.facebook.com]
+match = -15.8%%
+title = #tb Galaxy Indoor Vattanac Event feat Ton ChanSeyma តន់ ...
+url = https://www.facebook.com/djbrianbooi123/videos/tb-galaxy-indoor-vattanac-event-feat-ton-chanseyma-តន់-ចន្ទសីម៉ា-k-la-linda/680049536932291/
 
