--- a/images/chieu-lac-soc-10/config.ini
+++ b/images/chieu-lac-soc-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-10.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-11 02:33:15
+lastsearch = 2024-07-11 03:20:06
 
 [www.chieulongdinh.com.vn]
 match = -93.8%%
@@ -92,9 +92,9 @@ title = Khám phá làng nghề dệt chiếu lác ở Long An
 url = https://baomoi.com/kham-pha-lang-nghe-det-chieu-lac-o-long-an-c48038158.epi
 
 [books.google.com]
-match = -218.8%%
-title = Truyen ngan - Yeu tren tung ngon tay - Google Books Result
-url = https://books.google.com/books?id=WPbxCwAAQBAJ&pg=PT11&lpg=PT11&dq=chieu+lac+soc+10&source=bl&ots=dCOzLPa3Xn&sig=ACfU3U3149TKMXW-ZZu1xa27Q2lqBO7KaQ&hl=en&sa=X&ved=2ahUKEwjdlPnQsJuHAxXXOTQIHXyqBCQQ6AF6BAgeEAM
+match = -212.5%%
+title = 20 Tác Phẩm Ôn Thi Vào Lớp 10 Môn Văn - Google Books Result
+url = https://books.google.com/books?id=7-4EEQAAQBAJ&pg=PT18&lpg=PT18&dq=chieu+lac+soc+10&source=bl&ots=E377jBLN9C&sig=ACfU3U0LtAie-95hP2NOGbf72-h3pIq6-A&hl=en&sa=X&ved=2ahUKEwjpzqv6pZ2HAxV-j4kEHWT9CnoQ6AF6BAggEAM
 
 [thanglong.chinhphu.vn]
 match = -156.2%%
