--- a/images/nem-pyeoda-thuong-18/config.ini
+++ b/images/nem-pyeoda-thuong-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-18.html
 lastopen = 2024-06-18 17:45:17
 
 [search]
-lastsearch = 2024-07-11 02:35:06
+lastsearch = 2024-07-11 03:19:55
 
 [www.facebook.com]
 match = -45.0%%
@@ -17,9 +17,9 @@ title = Chăn ga gối Singapore Pyeoda LCHARME gấm 7 món PL18
 url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-lcharme-gam-7-mon-pl18.html
 
 [www.khodemthanhdo.com]
-match = -8.3%%
-title = ĐỆM THÀNH ĐÔ
-url = https://www.khodemthanhdo.com/
+match = 5.0%%
+title = Bộ chăn ga gối pyeoda
+url = https://www.khodemthanhdo.com/collections/bo-chan-ga-goi-phu-pyeoda
 
 [pyeoda.vn]
 match = -95.0%%
@@ -37,9 +37,9 @@ title = Bộ chăn ga gối Tencel Pyeoda Hàn Quốc đa sắc 5 món 18
 url = https://thegioidemonline.com/bo-chan-ga-goi-tencel-pyeoda-han-quoc-da-sac-5-mon-18.html
 
 [shopee.vn]
-match = -30.0%%
-title = Bộ chăn ga gối pyeoda sky silk 5 món
-url = https://shopee.vn/Bộ-chăn-ga-gối-pyeoda-sky-silk-5-món-i.331913906.13385758026
+match = -65.0%%
+title = bộ chăn ga gối lụa chần bông pyeoda(5 món)
+url = https://shopee.vn/bộ-chăn-ga-gối-lụa-chần-bông-pyeoda(5-món)-i.69505820.19625863021
 
 [www.diepxuan.com]
 match = 40.0%%
