--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-07-10 20:06:31
+lastsearch = 2024-07-11 03:21:53
 
 [www.tui.co.uk]
-match = -86.7%%
-title = Top things to do in Singapore | Discover
-url = https://www.tui.co.uk/discover/top-things-to-do-singapore
+match = -7.7%%
+title = Flight Status
+url = https://www.tui.co.uk/flight/arrivals-and-departures
 
 [www.travelgossip.co.uk]
 match = 0.0%%
@@ -17,9 +17,9 @@ title =
 url = https://www.travelgossip.co.uk/latestnews/marella-cruises-cancels-winter-2024-25-asia-and-middle-east-programme/
 
 [www.flightaware.com]
-match = -60.0%%
-title = Live TUI Airways Flight Status
-url = https://www.flightaware.com/live/fleet/TOM
+match = -213.3%%
+title = BY165 (TOM165) TUI Airways Flight Tracking and History ...
+url = https://www.flightaware.com/live/flight/TOM165/history/20240315/0520Z/WSSS/EGCC
 
 [www.cruisetimetables.com]
 match = -20.0%%
