CI images update

--- a/images/ruot-goi-ke-re/config.ini
+++ b/images/ruot-goi-ke-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-re.html
 lastopen = 2024-06-10 01:04:04
 
 [search]
-lastsearch = 2024-07-11 01:55:31
+lastsearch = 2024-07-11 03:37:21
 
 [www.thanhthuyhanh.com]
 match = 78.6%%
@@ -90,4 +90,39 @@ url = https://tiki.vn/ruot-goi/c23366
 match = -171.4%%
 title = Kinh Nghiệm Nên Mua Ruột Gối Loại Nào Để Ngủ Ngon
 url = https://ru9.vn/blogs/magazine/nen-mua-ruot-goi-loai-nao
+
+[www.nguonhangsigiare.com.vn]
+match = -235.7%%
+title = VẢI QUANG HÙNG / VAI QUANG HUNG / VẢI CHĂN GA GỐI ...
+url = http://www.nguonhangsigiare.com.vn/
+
+[fitesvietnam.com.vn]
+match = -321.4%%
+title = export grouper - Search - Provided Services - Fisheries Technology ...
+url = http://fitesvietnam.com.vn/index.php?language=en&nv=cac-dich-vu-da-cung-cap&op=search&q=export+grouper
+
+[hoangthinhsafety.com]
+match = -135.7%%
+title = Dây đai lưng bảo hộ - HOÀNG THỊNH SAFETY
+url = http://hoangthinhsafety.com/san-pham/bao-ho-chong-roi-nga-cao-102/day-dai-lung-bao-ho-230/
+
+[oldversion.stu.edu.vn]
+match = -278.6%%
+title = Saigon Technology University - Department of Quality Assurance
+url = http://oldversion.stu.edu.vn/en/297/department-of-quality-assurance.html
+
+[xuandieu.tiengiang.edu.vn]
+match = 0.0%%
+title = Trường THCS Xuân Diệu
+url = http://xuandieu.tiengiang.edu.vn/index.aspx?docid=0511
+
+[everon.com]
+match = -7.1%%
+title = sitemap_news.xml
+url = https://everon.com/sitemap_news.xml
+
+[ldldgct.org.vn]
+match = -78.6%%
+title = LIEN DOAN LAO DONG GO CONG TAY
+url = http://ldldgct.org.vn/27/.html
 
