--- a/images/tam-trai-ks-uc-220-250/config.ini
+++ b/images/tam-trai-ks-uc-220-250/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-220-250.html
 lastopen = 2024-06-07 01:32:07
 
 [search]
-lastsearch = 2024-07-11 02:47:21
+lastsearch = 2024-07-11 03:37:55
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -570,4 +570,9 @@ url = https://bpelsg.ca.gov/pubs/num_eng_82.pdf
 match = -54.5%%
 title = BCA 22-250 Full Inspection & Field Review
 url = https://www.youtube.com/watch?v=lZZp8HArn0Y
+
+[www.adidas.com.vn]
+match = 9.1%%
+title = Cửa Hàng adidas Trực Tuyến
+url = https://www.adidas.com.vn/vi/help/sea-size-guide/men
 
