--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-07-10 17:48:21
+lastsearch = 2024-07-11 03:28:42
 
 [www.youtube.com]
 match = -115.8%%
@@ -225,4 +225,9 @@ url = https://bptv.vn/news/19/159820/doc-dao-do-trang-tri-lam-tu-vo-bap
 match = -157.9%%
 title = Khuyến cáo thu nhặt, xử lý quả cây ngô đồng trong trường ...
 url = https://baolamdong.vn/toa-soan-ban-doc/202303/khuyen-cao-thu-nhat-xu-ly-qua-cay-ngo-dong-trong-truong-hoc-4861fbb/
+
+[shopee.vn]
+match = -68.4%%
+title = bàn ghế học sinh chính hãng xuân hòa 14 07cs
+url = https://shopee.vn/product/390741885/24431682129?gsht=StznoKFCWptXK5Vt
 
