--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-11 02:18:34
+lastsearch = 2024-07-11 03:29:56
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -52,14 +52,14 @@ title = Nhận án tù chung thân vì làm đại lý bán ma túy
 url = https://baomoi.com/nhan-an-tu-chung-than-vi-lam-dai-ly-ban-ma-tuy-c49583957.epi
 
 [tuyensinh247.com]
-match = -225.0%%
-title = Một con lắc đơn có chiều dài xác định, khi treo vật có khối ...
-url = https://tuyensinh247.com/bai-tap-624929.html
+match = -200.0%%
+title = Con lắc đơn gồm sợi dây có chiều dài 1,63 m và quả cầu ...
+url = https://tuyensinh247.com/bai-tap-618536.html
 
 [www.thegioididong.com]
-match = -193.8%%
-title = Top 16 game Idle trên điện thoại Android, iOS hay nhất
-url = https://www.thegioididong.com/game-app/top-16-game-idle-tren-dien-thoai-android-ios-hay-nhat-khong-the-bo-1334353
+match = -212.5%%
+title = Top 20 game online mobile (Android, iOS) hay nhất nên ...
+url = https://www.thegioididong.com/game-app/top-10-game-online-hay-nhat-tren-dien-thoai-android-ios-1312542
 
 [vnexpress.net]
 match = -131.2%%
@@ -92,9 +92,9 @@ title = Chợ ma – dấu ấn nghề chiếu
 url = https://baotang.dongthap.gov.vn/di-san-van-hoa/cho-ma-dau-an-nghe-chieu-37.html
 
 [sv.ut.edu.vn]
-match = -75.0%%
-title = luật poker omaha-App Store5.93.517
-url = https://sv.ut.edu.vn/newsr4ru7ie5.html
+match = -125.0%%
+title = mega88 slot game–Apps on Google Play964.91.4
+url = https://sv.ut.edu.vn/newscowtl1.html
 
 [yamaha-motor.com.vn]
 match = -43.8%%
@@ -425,4 +425,9 @@ url = https://www.cantho.gov.vn/wps/portal/home/du-khach/chi-tiet/diem-tham-quan
 match = -193.8%%
 title = Phái đoàn Ban Hoằng pháp cùng Ban Kinh tế Tài chính ...
 url = https://phatsuonline.vn/phai-doan-ban-hoang-phap-cung-ban-kinh-te-tai-chinh-tw-tham-va-cung-duong-truong-ha-tinh-cao-bang-56
+
+[atecvietnambranch.com]
+match = -87.5%%
+title = Secured Home of atecvietnambranch.com
+url = https://atecvietnambranch.com/
 
