--- a/images/nem-pyeoda-thuong-18/config.ini
+++ b/images/nem-pyeoda-thuong-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-18.html
 lastopen = 2024-06-18 17:45:17
 
 [search]
-lastsearch = 2024-07-11 03:19:55
+lastsearch = 2024-07-11 03:30:44
 
 [www.facebook.com]
 match = -45.0%%
@@ -37,9 +37,9 @@ title = Bộ chăn ga gối Tencel Pyeoda Hàn Quốc đa sắc 5 món 18
 url = https://thegioidemonline.com/bo-chan-ga-goi-tencel-pyeoda-han-quoc-da-sac-5-mon-18.html
 
 [shopee.vn]
-match = -65.0%%
-title = bộ chăn ga gối lụa chần bông pyeoda(5 món)
-url = https://shopee.vn/bộ-chăn-ga-gối-lụa-chần-bông-pyeoda(5-món)-i.69505820.19625863021
+match = -30.0%%
+title = Bộ chăn ga gối pyeoda sky silk 5 món
+url = https://shopee.vn/Bộ-chăn-ga-gối-pyeoda-sky-silk-5-món-i.331913906.13385758026
 
 [www.diepxuan.com]
 match = 40.0%%
