--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-07-11 00:17:41
+lastsearch = 2024-07-11 03:44:51
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -12,8 +12,8 @@ title = Chăn ga gối classic cotton mã C16-C38
 url = https://changagoidemsonghong.com/chan-ga-goi-cotton-c16-c38
 
 [www.diepxuan.com]
-match = 58.3%%
-title = Điệp Xuân Bộ chăn ga gối màu rẻ 16
+match = -58.3%%
+title = Điệp Xuân Bộ chăn ga gối màu rẻ 16 - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 
 [nangstore.vn]
@@ -22,9 +22,9 @@ title = Bộ chăn ga gối đệm Cotton poly đáng yêu Mẫu 16 - Nắng Sto
 url = https://nangstore.vn/bo-chan-ga-goi-de-m-cotton-poly-da-ng-yeu-ma-u-16
 
 [chanrathanhthuy.com]
-match = 50.0%%
-title = Chăn ga gối đệm giá rẻ
-url = https://chanrathanhthuy.com/tin-tuc/chan-ga-goi-dem-gia-re-1209.html
+match = 29.2%%
+title = Top 20 mẫu chăn ga gối đẹp giá rẻ
+url = https://chanrathanhthuy.com/tin-tuc/top-20-mau-chan-ga-goi-dep-gia-re-703.html
 
 [myhunggia.com]
 match = -4.2%%
