--- a/images/chan-3-kg/config.ini
+++ b/images/chan-3-kg/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-kg.html
 lastopen = 2024-06-09 21:50:05
 
 [search]
-lastsearch = 2024-07-11 01:56:34
+lastsearch = 2024-07-11 03:49:01
 
 [silverwow.net]
 match = -255.6%%
@@ -312,7 +312,7 @@ title = Cheong Chan Elephant Thick Caramel Sauce 3Kg
 url = https://11minimarket.com/product/cheong-chan-elephant-thick-caramel-sauce-3kg/
 
 [www.etsy.com]
-match = -377.8%%
-title = Sterling Silver Curb Chan, 1mm Thick 925 Solid ...
+match = -455.6%%
+title = Sterling Silver Curb Chan, 1mm Thick 925 Solid ... - Etsy
 url = https://www.etsy.com/listing/969422604/sterling-silver-curb-chan-1mm-thick-925
 
