--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-10 21:14:19
+lastsearch = 2024-07-11 03:46:19
 
 [en.wikipedia.org]
 match = 8.7%%
@@ -47,9 +47,9 @@ title = Latest Videos
 url = https://www.cnn.com/videos
 
 [cryptoslate.com]
-match = 8.7%%
-title = Cryptocurrency Rankings
-url = https://cryptoslate.com/coins/
+match = -17.4%%
+title = Highest Volume Cryptocurrencies
+url = https://cryptoslate.com/highest-volume/
 
 [www.irs.gov]
 match = -78.3%%
@@ -92,9 +92,9 @@ title = 1968 Annual Supplement - Page 1252 - Google Books Result
 url = https://books.google.com/books?id=Xk32BwAAQBAJ&pg=PA1252&lpg=PA1252&dq=ruot+nem+korea+9f+14+19&source=bl&ots=P-7ecUkecg&sig=ACfU3U1YJ_R59AlRDyuKssI7NdJhjF-eLw&hl=en&sa=X&ved=2ahUKEwjS5Pyq2tGGAxVkD1kFHc2aBHgQ6AF6BAgnEAM
 
 [30rates.com]
-match = -104.3%%
-title = Gold Price Prediction For Tomorrow, This Week And Month.
-url = https://30rates.com/gold-price-forecast-and-predictions
+match = -52.2%%
+title = USD TO ILS TODAY AND FORECAST TOMORROW, MONTH
+url = https://30rates.com/usd-to-ils-today-forecast-dollar-to-israeli-shekel
 
 [www.ncbi.nlm.nih.gov]
 match = -108.7%%
@@ -112,9 +112,9 @@ title =
 url = https://www.koreanclass101.com/korean-age/
 
 [www.tiktok.com]
-match = -73.9%%
-title = o dealer receitou cadialina 😂 - #minerva - #cblol
-url = https://www.tiktok.com/@gustavominerva/video/7389477096369720622
+match = -69.6%%
+title = the prize? a VAL plushie 🥰 #VALORANT | VALORANT
+url = https://www.tiktok.com/@valorant/video/7349209923131084074
 
 [www.unikorea.go.kr]
 match = -113.0%%
