--- a/images/tui-nem-korea-tuan-anh-14/config.ini
+++ b/images/tui-nem-korea-tuan-anh-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-14.html
 lastopen = 2024-06-17 10:43:32
 
 [search]
-lastsearch = 2024-07-11 03:30:21
+lastsearch = 2024-07-11 03:46:08
 
 [suongtuyet.com]
 match = 16.0%%
@@ -47,8 +47,8 @@ title = Đệm Bông Ép Korea Vải Cotton Tuấn Anh
 url = https://dem24h.vn/dem-bong-ep-korea-vai-cotton
 
 [demviethome.vn]
-match = -4.0%%
-title = Đệm Bông Ép Tuấn Anh 3 Mảnh Korea Gấm
+match = -36.0%%
+title = Đệm bông ép Tuấn Anh Korea Gấm giá rẻ hà nội. ...
 url = https://demviethome.vn/dem-bong-ep-tuan-anh-3-manh-korea-gam/
 
 [bedding.vn]
