--- a/images/chieu-truc-den-12/config.ini
+++ b/images/chieu-truc-den-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-den-12.html
 lastopen = 2024-06-07 00:20:09
 
 [search]
-lastsearch = 2024-07-11 03:18:12
+lastsearch = 2024-07-11 04:36:09
 
 [demxanh.com]
 match = -135.3%%
@@ -37,9 +37,9 @@ title = Chiếu trúc hạt ,hàng loại 1 [🚀 ship hỏa tốc]
 url = https://shopee.vn/Chiếu-trúc-hạt-hàng-loại-1-🚀-ship-hỏa-tốc--i.363378833.10326359415
 
 [vongxepsaigon.vn]
-match = -188.2%%
-title = Chiếu trúc chiếu tre hạt nâu đen hàng tốt loại 1 - Kích thước ...
-url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-nau-den-hang-tot-loai-1-kich-thuoc-120cm/
+match = 47.1%%
+title = chiếu trúc hạt nâu đen
+url = https://vongxepsaigon.vn/chieu-truc-hat-nau-den/
 
 [www.diepxuan.com]
 match = -64.7%%
