--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-10 22:46:03
+lastsearch = 2024-07-11 04:31:30
 
 [www.gov.uk]
 match = -200.0%%
@@ -182,9 +182,9 @@ title = Premier League Football News, Fixtures, Scores & Results
 url = https://www.premierleague.com/
 
 [books.google.com]
-match = -260.0%%
-title = Department of the Army Pamphlet - Page 153 - Google Books Result
-url = https://books.google.com/books?id=wBXAEQTV0TAC&pg=PA153&lpg=PA153&dq=man+re+trang+16&source=bl&ots=luPlxLDXQg&sig=ACfU3U1oGo4-bpPiDJtRyQuHojlj93Wbdw&hl=en&sa=X&ved=2ahUKEwiRjcOIyZyHAxVOJTQIHXKxDkcQ6AF6BAgnEAM
+match = -226.7%%
+title = Disce Mori: Learne to Dye. A Religious Discourse, Mouing ...
+url = https://books.google.com/books?id=RUeyeITVGj8C&pg=PA321&lpg=PA321&dq=man+re+trang+16&source=bl&ots=OP_G8Zj0fI&sig=ACfU3U3W-RxMdyglwYBjxHxZn9LBJ0wevg&hl=en&sa=X&ved=2ahUKEwiv2f30tZ2HAxUwmIkEHVAkCAsQ6AF6BAgiEAM
 
 [www.nolo.com]
 match = 0.0%%
@@ -654,7 +654,7 @@ url = https://www.liverpoolfc.com/
 [www.bernzomatic.com]
 match = -166.7%%
 title = Để học tốt Tiếng Anh 6Giải toán lớp 6 tập 1 trang 16
-url = https://www.bernzomatic.com/appwwcBy/53637.csv
+url = https://www.bernzomatic.com/app8789085
 
 [www.imdb.com]
 match = -86.7%%
