--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-07-10 21:37:59
+lastsearch = 2024-07-11 04:27:21
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -13,8 +13,8 @@ url = https://www.sieuthinem.com/ct-san-pham/273/nem-cao-su-thien-nhien-everhome
 
 [demxanh.com]
 match = -19.0%%
-title = Đệm bông ép Everhome 1m8 giá bao nhiêu?
-url = https://demxanh.com/dem-bong-ep-everhome-1m8-gia-bao-nhieu.html
+title = Đệm bông ép chính hãng giảm 50 ...
+url = https://demxanh.com/dem-bong-ep.html
 
 [www.ebay.com]
 match = -128.6%%
@@ -27,9 +27,9 @@ title = Should an Abugida script be created for Vietnamese? ...
 url = https://www.quora.com/Should-an-Abugida-script-be-created-for-Vietnamese-An-abugida-script-in-my-opinion-will-look-cool-and-can-also-be-the-first-ever-home-grown-script-instead-of-the-forever-taking-Chinese-characters-or-the-foreign
 
 [sieuthidemonline.vn]
-match = -61.9%%
-title = Đệm Foam Osakawa Everhome - SieuthidemOnline.vn
-url = https://sieuthidemonline.vn/dem-foam-osakawa-everhome/
+match = -85.7%%
+title = Đệm cao su thiên nhiên cao cấp Lavender Everhome
+url = https://sieuthidemonline.vn/dem-cao-su-lavender/
 
 [thegioidemviet.vn]
 match = -9.5%%
@@ -37,9 +37,9 @@ title = Bảng giá Đệm Bông Ép - Hà Nội
 url = https://thegioidemviet.vn/dem-bong-ep/
 
 [www.diepxuan.com]
-match = -61.9%%
-title = Điệp Xuân Nệm Everhome - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/nem-everhome.html
+match = 23.8%%
+title = Nệm everhome TC 15F 16 20 - Điệp Xuân
+url = https://www.diepxuan.com/nem-everhome-tc-15f-16-20.html
 
 [bachhoadem.vn]
 match = 28.6%%
@@ -102,7 +102,7 @@ title = CODEBOOK FOR THE ANNUAL HOUSING SURVEY ...
 url = https://www.huduser.gov/portal/sites/default/files/pdf/Codebook-for-the-AHDB-1973-1993.pdf
 
 [demeverhome.com]
-match = 5.0%%
-title = chăn ga gối Everhome
+match = 0.0%%
+title = Chăn ga gối đệm Everhome
 url = https://demeverhome.com/
 
