--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-07-10 21:13:25
+lastsearch = 2024-07-11 04:36:20
 
 [www.lazada.vn]
 match = -61.1%%
@@ -12,14 +12,14 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -127.8%%
-title = Khay cuốn nem siêu tốc | KHAY CUỐN SIÊU TỐC | CUỐN ...
-url = https://www.facebook.com/ngoinhachichbong/videos/khay-cuốn-nem-siêu-tốc/1791938007504711/
+match = -11.1%%
+title = Nem Nướng | Ho Chi Minh City
+url = https://www.facebook.com/p/Nem-Nướng-100054522756775/
 
 [thegioinem.com]
-match = -105.6%%
-title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
-url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
+match = 23.5%%
+title = Bảng Giá Nệm 2024
+url = https://thegioinem.com/bang-gia-nem
 
 [garan.vn]
 match = -166.7%%
@@ -37,8 +37,8 @@ title = Tuyệt chiêu làm TAI HEO TRỘN THÍNH giòn ngon. Nem Thính ...
 url = https://www.youtube.com/watch?v=NyujRL0KfRw
 
 [www.instagram.com]
-match = -155.6%%
-title = ĐI CHƠI | Quán nem nướng, bún thịt nướng siêu tâm đắc ...
+match = -172.2%%
+title = Quán nem nướng, bún thịt nướng siêu tâm đắc của tuiiiii. ...
 url = https://www.instagram.com/danang_angi/p/C8FKUaLvOLp/
 
 [vietnamnet.vn]
@@ -47,9 +47,9 @@ title = Nem rán Việt Nam được ca ngợi là món ăn nhẹ ngon nhất ..
 url = https://vietnamnet.vn/nem-ran-viet-nam-duoc-ca-ngoi-la-mon-an-nhe-ngon-nhat-the-gioi-2149178.html
 
 [www.tiktok.com]
-match = -16.7%%
-title = Nem Nuong Que Huong Air Fryer
-url = https://www.tiktok.com/discover/nem-nuong-que-huong-air-fryer
+match = -172.2%%
+title = Replying to @user74757483939 Brodard’s nem nuong sauce ...
+url = https://www.tiktok.com/@quyen_cooks/video/7216197212018068779?lang=en
 
 [www.diepxuan.com]
 match = 44.4%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Nệm siêu nhẹ 9F 14
 url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 
 [m.facebook.com]
-match = -88.9%%
-title = Ăn Ngon Bà rịa | NEM CHUA RÁN THỊT NGON SỐ 1
-url = https://m.facebook.com/groups/2222988021289951/posts/3638906849698054/
+match = -144.4%%
+title = Ăn vặt Vị Thanh - Hậu Giang | Nem nướng lụi sieu ngon
+url = https://m.facebook.com/groups/831435913920996/posts/2049638048767437/
 
 [emartmall.com.vn]
 match = 0.0%%
