--- a/images/tui-nem-korea-tuan-anh-18/config.ini
+++ b/images/tui-nem-korea-tuan-anh-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-18.html
 lastopen = 2024-06-10 01:34:06
 
 [search]
-lastsearch = 2024-07-11 03:52:21
+lastsearch = 2024-07-11 04:27:10
 
 [tuananh.vn]
-match = 22.2%%
-title = Đệm Korea Gấm Plus
-url = https://tuananh.vn/dem-korea-gam-plus-p223.html
+match = 8.0%%
+title = Đệm bông ép 3 mảnh Korea Kaki
+url = https://tuananh.vn/dem-bong-ep-korea-kaki-p112.html
 
 [demxanh.com]
 match = -28.0%%
@@ -62,9 +62,9 @@ title = Đệm PE Korea cao cấp 1m8 x 2m
 url = https://demgiare.net/dem-pe-korea-cao-cap-1m8-x-2m.html
 
 [demchatluong.com]
-match = 28.0%%
-title = Đệm lò xo Korea Tuấn Anh chính hãng
-url = https://demchatluong.com/san-pham/dem-lo-xo-korea-tuan-anh-chinh-hang/
+match = -12.0%%
+title = Đệm bông ép Tuấn Anh Korea vỏ gấm 3 mảnh
+url = https://demchatluong.com/san-pham/dem-bong-ep-tuan-anh-korea-vo-gam-3-manh/
 
 [www.diepxuan.com]
 match = 31.6%%
