--- a/images/tui-warmdream-15/config.ini
+++ b/images/tui-warmdream-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-15.html
 lastopen = 2024-06-10 00:24:28
 
 [search]
-lastsearch = 2024-07-10 23:19:59
+lastsearch = 2024-07-11 04:26:05
 
 [www.lazada.vn]
 match = -268.8%%
@@ -22,9 +22,9 @@ title = [ F4 THAILAND ] Warm Dream - EP.6 - NovelToon
 url = https://noveltoon.vn/vi/watch/1965107/7048058
 
 [www.tiktok.com]
-match = -181.2%%
-title = Gorgeous @ARLINDA🤍 #beautytok #liptutorial #hudabeauty
-url = https://www.tiktok.com/@hudabeauty/video/7370757654081244459
+match = -6.2%%
+title = Huda Beauty Lip Stain
+url = https://www.tiktok.com/@thelipsticklesbians/video/7235411910361976106
 
 [eastcoastbeddingusa.com]
 match = -125.0%%
