CI images update

--- a/images/vo-goi-om-es1804-80x100/config.ini
+++ b/images/vo-goi-om-es1804-80x100/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-om-es1804-80x100.html
 lastopen = 2024-07-01 14:25:38
 
 [search]
-lastsearch = 2024-07-11 03:33:06
+lastsearch = 2024-07-11 05:32:23
 
 [www.everonqb.com]
-match = 0.0%%
-title = Everon Quảng Bình Vỏ gối ôm ESB23022 80x100
-url = https://www.everonqb.com/vo-goi-om-esb23022-80x100.html
+match = -43.5%%
+title = Vỏ gối ôm ES1715 80x100 - Everon Quảng Bình Trang Chủ
+url = https://www.everonqb.com/vo-goi-om-es1715-80x100.html
 
 [www.reddit.com]
 match = -91.3%%
@@ -25,4 +25,29 @@ url = https://everonletrongtan.com/bo-chan-ga-goi-everon-es1804
 match = 100.0%%
 title = Vỏ gối ôm ES1804 80x100
 url = https://www.diepxuan.com/vo-goi-om-es1804-80x100.html
+
+[forum.cartridgecollectors.org]
+match = -21.7%%
+title = Two more shotshells from east Europe
+url = https://forum.cartridgecollectors.org/t/two-more-shotshells-from-east-europe/37792
+
+[etischer.com]
+match = -46.7%%
+title = Battery Charger
+url = http://etischer.com/awdev/charger.html
+
+[www.tabletennisdaily.com]
+match = -11.1%%
+title = Dhs h8-80 | Page 5
+url = https://www.tabletennisdaily.com/forum/topics/dhs-h8-80.25218/page-5
+
+[github.com]
+match = -130.4%%
+title = Width issue with certain emoji #55 - charmbracelet/lipgloss
+url = https://github.com/charmbracelet/lipgloss/issues/55
+
+[www.tripadvisor.com]
+match = -108.7%%
+title = ATV thumbs up! - Review of Otium International, Punta ...
+url = https://www.tripadvisor.com/ShowUserReviews-g147293-d10021648-r950330283-Otium_International-Punta_Cana_La_Altagracia_Province_Dominican_Republic.html
 
