--- a/images/nem-pyeoda-thuong-18/config.ini
+++ b/images/nem-pyeoda-thuong-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-18.html
 lastopen = 2024-06-18 17:45:17
 
 [search]
-lastsearch = 2024-07-11 03:30:44
+lastsearch = 2024-07-11 05:30:57
 
 [www.facebook.com]
 match = -45.0%%
@@ -17,9 +17,9 @@ title = Chăn ga gối Singapore Pyeoda LCHARME gấm 7 món PL18
 url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-lcharme-gam-7-mon-pl18.html
 
 [www.khodemthanhdo.com]
-match = 5.0%%
-title = Bộ chăn ga gối pyeoda
-url = https://www.khodemthanhdo.com/collections/bo-chan-ga-goi-phu-pyeoda
+match = -30.0%%
+title = Bộ chăn ga gối lụa pyeoda sky silk
+url = https://www.khodemthanhdo.com/products/bo-chan-ga-goi-lua-pyeoda-sky-silk
 
 [pyeoda.vn]
 match = -95.0%%
@@ -67,7 +67,7 @@ title = Chăn Ga Pyeoda Cao Cấp, Chính Hãng
 url = https://vuanem.com/brand/pyeoda
 
 [changagoidemphuongbac.com]
-match = -70.0%%
-title = Chăn hè cotton Pyeoda - Chăn ga gối đệm Phương Bắc
-url = https://changagoidemphuongbac.com/chan-he-cotton-pyeoda/
+match = -85.0%%
+title = Chăn sơ đậu nành Pyeoda - Chăn ga gối đệm Phương Bắc
+url = https://changagoidemphuongbac.com/chan-so-dau-nanh-pyeoda/
 
