--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-07-11 01:53:23
+lastsearch = 2024-07-11 05:32:34
 
 [www.tiktok.com]
 match = -231.2%%
@@ -32,9 +32,9 @@ title = Nhu shop | Binh Dinh
 url = https://m.facebook.com/p/Nhu-shop-100036848391375/?locale=is_IS
 
 [www.diepxuan.com]
-match = -93.8%%
-title = Nệm bông - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/nem-bong.html?p=2
+match = 18.8%%
+title = Túi nệm - Điệp Xuân
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [diepxuan.com]
 match = 6.2%%
