--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-07-11 03:49:34
+lastsearch = 2024-07-11 05:51:26
 
 [www.youtube.com]
 match = -40.7%%
@@ -57,9 +57,9 @@ title = Gối & Vỏ Gối SIMPLEHOME giá rẻ nhiều ưu đãi, giao hàng ..
 url = https://dienmaycholon.vn/goi-vo-goi-simplehome
 
 [ninhouse.vn]
-match = -55.6%%
-title = Cách giặt ga giường dính máu cho ngày “đèn đỏ” trắng ...
-url = https://ninhouse.vn/blogs/news/cach-giat-ga-giuong-dinh-mau-cho-ngay-den-do-trang-sach-tinh-tuom
+match = -7.4%%
+title = Mua vỏ gối nằm | Áo gối ngủ đẹp giá rẻ ...
+url = https://ninhouse.vn/collections/vo-goi-nam
 
 [thegioidemviet.vn]
 match = -70.4%%
