--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-07-11 04:53:07
+lastsearch = 2024-07-11 05:44:45
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -12,9 +12,9 @@ title = Chiếu gấp Đài Loan 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-gap-dai-loan-160x200.html
 
 [www.youtube.com]
-match = -104.8%%
-title = Đi Đâu Chơi Ăn Gì Khi Đến Đài Loan - Một Ngày Khám Phá ...
-url = https://www.youtube.com/watch?v=FH6nkqGHOZk
+match = -133.3%%
+title = Dự báo thời tiết đêm nay và ngày mai 11/7. Bắc và Trung Bộ ...
+url = https://www.youtube.com/watch?v=rGvhu6VEmFw
 
 [roc-taiwan.org]
 match = -66.7%%
@@ -47,9 +47,9 @@ title = THỦ TỤC XIN CẤP ĐỔI HỘ CHIẾU ĐÀI LOAN
 url = https://www.roc-taiwan.org/vnsgn_vi/post/91.html
 
 [www.facebook.com]
-match = -23.8%%
-title = Raohe Ẩm Thực Đài | Ho Chi Minh City
-url = https://www.facebook.com/RaoheAmThucDai/
+match = -42.9%%
+title = CGV Cinemas Vietnam - Sau 4 ngày công ...
+url = https://www.facebook.com/photo.php?fbid=844924327674339&id=100064703379579&set=a.669666201866820
 
 [www.tripadvisor.com.vn]
 match = -42.9%%
@@ -157,9 +157,9 @@ title = Chú rể 40 tuổi đẹp trai chi 700.000 tệ cưới cô dâu Việt
 url = https://www.bbc.com/vietnamese/articles/cyx0jw1ypq9o
 
 [www.instagram.com]
-match = -85.7%%
-title = Hộ chiếu của Đài Loan được VisaGuide.World Passport ...
-url = https://www.instagram.com/toiodailoan/p/C8MQfOfxc1N/
+match = -81.0%%
+title = Photo by REGINA ZILIN TAN on December 10, 2023.
+url = https://www.instagram.com/thebmbshxll/p/C0qw2Y0Sy8q/
 
 [www.hcmulaw.edu.vn]
 match = -90.5%%
