--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-11 04:53:18
+lastsearch = 2024-07-11 05:55:19
 
 [shopee.vn]
 match = -8.0%%
@@ -87,14 +87,14 @@ title = Sự kiện Dịch vụ Lãnh Sự sắp tới tại Đà Nẵng
 url = https://vn.usembassy.gov/vi/upcoming-consular-services-event-in-da-nang-24-june-2024/
 
 [m.facebook.com]
-match = -88.0%%
-title = Ngồi coi video về chống lừa đảo... - Xin chào, tôi ở Đài Loan
-url = https://m.facebook.com/toiodailoan/posts/5438087432905953/?locale=hi_IN
+match = -16.0%%
+title = Ăn chơi Đài Loan 台灣 - 去哪吃啥?
+url = https://m.facebook.com/groups/266525127391292/
 
 [www.youtube.com]
-match = -108.0%%
-title = Đài Loan rung lắc cả đêm vì hàng chục trận động đất | Tin thế ...
-url = https://www.youtube.com/watch?v=duu0_0RZjsE
+match = -84.0%%
+title = Điểm tin sáng 15/6: Đài Loan cảnh báo có tên lửa hành trình ...
+url = https://www.youtube.com/watch?v=87CO4_fw3xQ
 
 [www.qdnd.vn]
 match = -72.0%%
