--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-07-11 00:52:43
+lastsearch = 2024-07-11 05:51:11
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -47,14 +47,14 @@ title = Minority Groups in North Vietnam - Page 153 - Google Books Result
 url = https://books.google.com/books?id=ZRZwetkStM4C&pg=PA153&lpg=PA153&dq=man+re+xanh+16&source=bl&ots=RbPy4eEGGl&sig=ACfU3U1UvcPPZ0tWlRNybeN5S8pok4pINw&hl=en&sa=X&ved=2ahUKEwj7rIC7uJeHAxX5GFkFHfIMDd0Q6AF6BAgVEAM
 
 [mobilecity.vn]
-match = -207.1%%
-title = Điện thoại Xiaomi Redmi K60 5G (Snapdragon 8+ Gen 1
-url = https://mobilecity.vn/dien-thoai/xiaomi-redmi-k60.html
+match = -185.7%%
+title = Xiaomi Redmi Note 12 Turbo (Snapdragon 7+ Gen 2)
+url = https://mobilecity.vn/dien-thoai/xiaomi-redmi-note-12-turbo-edition.html
 
 [www.youtube.com]
-match = -242.9%%
-title = [Phim Việt Nam] TRÁI TIM MÀU XANH | Tập 16 | Phim Tâm Lý ...
-url = https://www.youtube.com/watch?v=3ybqAT8S9Pw
+match = -292.9%%
+title = Podcast #16: Các Tân Sinh Viên đi xe gì thì hợp lý? | Đường ...
+url = https://www.youtube.com/watch?v=AaIj_87__kg
 
 [www.gadgets360.com]
 match = 0.0%%
@@ -82,9 +82,9 @@ title = Miếng dán màn hình laptop chống tia UV, ánh sáng xanh ...
 url = https://shopee.vn/Miếng-dán-màn-hình-laptop-chống-tia-UV-ánh-sáng-xanh-bảo-vệ-mắt-(film-cao-cấp)-i.40381945.12466079786
 
 [www.dienmayxanh.com]
-match = -264.3%%
-title = Top 10 tivi 65 inch giá rẻ dưới 15 triệu đáng sở hữu tại ...
-url = https://www.dienmayxanh.com/kinh-nghiem-hay/top-smart-tivi-65-inch-dang-dau-tu-811887
+match = -250.0%%
+title = Top 8 laptop màn hình cảm ứng chất lượng cao tốt nhất 2023
+url = https://www.dienmayxanh.com/kinh-nghiem-hay/top-5-laptop-co-man-hinh-cam-ung-gia-thap-den-cao-747636
 
 [thecoffeehouse.com]
 match = 28.6%%
