--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-07-11 05:32:45
+lastsearch = 2024-07-11 05:55:34
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -12,8 +12,8 @@ title = Điệp Xuân Ruột Korea - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/nem-bong/ruot-korea.html
 
 [www.reddit.com]
-match = 8.7%%
-title = Korean server Crowe is dead
+match = -60.9%%
+title = Korean server Crowe is dead : r/TowerofFantasy
 url = https://www.reddit.com/r/TowerofFantasy/comments/x7z1kj/korean_server_crowe_is_dead/
 
 [www.southpasadenaca.gov]
@@ -22,9 +22,9 @@ title = notice on public participation & accessibility
 url = https://www.southpasadenaca.gov/files/assets/public/v/1/police/documents/agenda-packet-combined-092.pdf
 
 [en.wikipedia.org]
-match = -58.3%%
-title = Nam Joo-hyuk
-url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
+match = -72.7%%
+title = Kristi Noem
+url = https://en.wikipedia.org/wiki/Kristi_Noem
 
 [www.facebook.com]
 match = -87.0%%
@@ -422,9 +422,9 @@ title = Investor relations - PCH (EN) - ProCredit Holding
 url = https://www.procredit-holding.com/investor-relations/
 
 [en.yna.co.kr]
-match = -91.3%%
-title = Seoul, Hanoi agree to enhance cooperation in science ...
-url = https://en.yna.co.kr/view/AEN20180323002700320
+match = -121.7%%
+title = S. Korean vice foreign minister holds bilateral meetings at ...
+url = https://en.yna.co.kr/view/AEN20171121002500315
 
 [www.usmcu.edu]
 match = -104.3%%
